--- a/ᎩᏔᏯ.mw
+++ b/ᎩᏔᏯ.mw
@@ -30,60 +30,59 @@
 * ''[[Prunus alabamensis]]'' [[Alabama cherry|ᎠᎳᏆᎹ ᎩᏔᏯ]]
 * ''[[Prunus apetala]]'' (Siebold ᎠᎴ Zucc.) Franch.  Sav. - Clove ᎩᏔᏯ
 * ''[[Prunus avium]]'' (L.) L. - [[Wild cherry|ᎩᏔᏯ ᎢᎾᎨ ᎡᎯ]], [[Sweet cherry|ᏭᎦᎾᏍᏓ ᎩᏔᏯ]], Mazzard ᎠᎴ Gean
-* ''[[Prunus besseyi]]'' - Western Sand Cherry, Hansen's ᎠᎴ Hanson's Bush ᎩᏔᏯ, Rocky Mountain Cherry, ᎠᎴ Bessey's ᎩᏔᏯ
-* ''[[Prunus campanulata]]'' Maxim. - Taiwan ᎩᏔᏯ, Formosan ᎩᏔᏯ ᎠᎴ Bell-flowered cherry
-* ''[[Prunus canescens]]'' Bois. - Greyleaf cherry
-* ''[[Prunus caroliniana]]'' Aiton - Carolina laurel cherry ᎠᎴ Laurel cherry
+* ''[[Prunus besseyi]]'' - [[Western Sand Cherry|ᏭᏕᎵᎬᏗᏢ ᏃᎭᏲ ᎩᏔᏯ]], Hansen's ᎠᎴ Hanson's ᎤᏩᏱᏢᎢ ᎩᏔᏯ, [[Rocky Mountain Cherry|ᏅᏯ ᏦᏓᎸ ᎩᏔᏯ]], ᎠᎴ Bessey's ᎩᏔᏯ
+* ''[[Prunus campanulata]]'' Maxim. - Taiwan ᎩᏔᏯ, Formosan ᎩᏔᏯ ᎠᎴ [[Bell|ᎤᎭᏢᏂ]]-flowered ᎩᏔᏯ
+* ''[[Prunus canescens]]'' Bois. - [[Greyleaf cherry|ᎠᏍᎪᎸ ᎬᏂᎨ-ᎤᎦᎶᎦ ᎩᏔᏯ]]
+* ''[[Prunus caroliniana]]'' Aiton - Carolina laurel ᎩᏔᏯ ᎠᎴ Laurel ᎩᏔᏯ
 * ''[[Prunus cerasoides]]'' D. Don. - Himalayan ᎩᏔᏯ ᎢᎾᎨ ᎡᎯ
 * ''[[Prunus cerasus]]'' L. - [[Sour Cherry|ᏧᎿᏦᏍᏗ ᎩᏔᏯ]]
-* ''[[Prunus cistena]]'' Koehne - Purpleleaf sand cherry
-* ''[[Prunus cornuta]]'' (Wall. ex Royle) Steud. - Himalayan bird cherry
+* ''[[Prunus cistena]]'' Koehne - [[Purpleleaf sand cherry|ᎩᎨᏍᏗ-ᎤᎦᎶᎦ ᏃᎭᏲ ᎩᏔᏯ]]
+* ''[[Prunus cornuta]]'' (Wall. ex Royle) Steud. - Himalayan ᏥᏍᏆ ᎩᏔᏯ
 * ''[[Prunus cuthbertii]]'' Small - Cuthbert ᎩᏔᏯ
-* ''[[Prunus cyclamina]]'' Koehne - Cyclamen ᎩᏔᏯ ᎠᎴ Chinese flowering cherry
+* ''[[Prunus cyclamina]]'' Koehne - Cyclamen ᎩᏔᏯ ᎠᎴ Chinese [[flowering|ᎠᏥᎸᏍᎦ]] ᎩᏔᏯ
 * ''[[Prunus dawyckensis]]'' Sealy - Dawyck ᎩᏔᏯ
-* ''[[Prunus dielsiana]]'' C.K. Schneid. - Tailed-leaf cherry
+* ''[[Prunus dielsiana]]'' C.K. Schneid. - Tailed-[[leaf|ᎤᎦᎶᎦ]] ᎩᏔᏯ
 * ''[[Prunus emarginata]]'' (Douglas ex Hook.) Walp. - [[Oregon cherry|ᎤᏩᎦᏂ ᎩᏔᏯ]], ᎠᎴ [[Bitter cherry|ᎤᏴᏍᏗ ᎩᏔᏯ]]
-* ''[[Prunus eminens]]'' Beck - (Semi-sour cherry)
-* ''[[Prunus fruticosa]]'' Pall. - European dwarf cherry, [[Dwarf cherry|ᎤᏍᏗ ᎩᏔᏯ]], Mongolian cherry ᎠᎴ Steppe cherry
-* ''[[Prunus gondouinii]]'' (Poit. ᎠᎴ Turpin) Rehder - Duke cherry
-* ''[[Prunus grayana]]'' Maxim. - Japanese bird cherry ᎠᎴ Gray's bird cherry
-* ''[[Prunus humilis]]'' Bunge - Chinese plum-cherry ᎠᎴ Humble bush cherry
-* ''[[Prunus ilicifolia]]'' (Nutt. ex Hook. ᎠᎴ Arn.) Walp. - Hollyleaf cherry, Evergreen cherry, Holly-leaved cherry ᎠᎴ Islay
-* ''[[Prunus incisa]]'' Thunb. - Fuji cherry
-* ''[[Prunus jamasakura]]'' Siebold ex Koidz. - Japanese mountain cherry ᎠᎴ Japanese hill cherry
-* ''[[Prunus japonica]]'' Thunb. - Korean cherry
-* ''[[Prunus laurocerasus]]'' L. - Cherry laurel 
-* ''[[Prunus lyonii]]'' (Eastw.) Sarg. - Catalina Island cherry
-* ''[[Prunus maackii]]'' Rupr. - Manchurian ᎩᏔᏯ ᎠᎴ Amur chokecherry
-* ''[[Prunus mahaleb]]'' L. - [[Saint Lucie cherry|ᎾᏍᏕᏅᎾ ᎷᏏᎠ ᎩᏔᏯ]], [[Rock cherry|ᏅᏯ]], Perfumed cherry ᎠᎴ Mahaleb cherry
-* ''[[Prunus maximowiczii]]'' Rupr. - [[Miyama cherry|ᎻᏯᎹ ᎩᏔᏯ]] ᎠᎴ Korean cherry
-
-* ''[[Prunus mume]]'' (Siebold & Zucc.) Ume, Japanese apricot, Chinese plum
-* ''[[Prunus myrtifolia]]'' (L.) Urb. - West Indian cherry
-* ''[[Prunus nepaulensis]]'' (Ser.) Steud. - Nepal bird cherry
-* ''[[Prunus nipponica]]'' Matsum. - Takane ᎩᏔᏯ, Peak cherry ᎠᎴ Japanese Alpine cherry
-* ''[[Prunus occidentalis]]'' Sw. - Western cherry laurel
-* ''[[Prunus padus]]'' L. - [[Bird cherry|ᏥᏍᏆ ᎩᏔᏯ]] ᎠᎴ European bird cherry
+* ''[[Prunus eminens]]'' Beck - (Semi-sour ᎩᏔᏯ)
+* ''[[Prunus fruticosa]]'' Pall. - European ᎤᏍᏗ ᎩᏔᏯ, [[Dwarf cherry|ᎤᏍᏗ ᎩᏔᏯ]], Mongolian ᎩᏔᏯ ᎠᎴ Steppe ᎩᏔᏯ
+* ''[[Prunus gondouinii]]'' (Poit. ᎠᎴ Turpin) Rehder - Duke ᎩᏔᏯ
+* ''[[Prunus grayana]]'' Maxim. - Japanese ᏥᏍᏆ ᎩᏔᏯ ᎠᎴ Gray's ᏥᏍᏆ ᎩᏔᏯ
+* ''[[Prunus humilis]]'' Bunge - Chinese [[plum|ᏆᏄᎾᏍᏗᎢ]]-ᎩᏔᏯ ᎠᎴ [[Humble bush cherry|ᏄᏢᏉᏛᎾ ᎤᏩᏱᏢᎢ ᎩᏔᏯ]]
+* ''[[Prunus ilicifolia]]'' (Nutt. ex Hook. ᎠᎴ Arn.) Walp. - [[Hollyleaf cherry|ᎤᏍᏓᏍᏗ ᎤᎦᎶᎦ ᎩᏔᏯ]], Evergreen ᎩᏔᏯ, [[Holly-leaved cherry|ᎤᏍᏓᏍᏗ ᎤᎦᎶᎦ ᎩᏔᏯ]] ᎠᎴ Islay
+* ''[[Prunus incisa]]'' Thunb. - Fuji ᎩᏔᏯ
+* ''[[Prunus jamasakura]]'' Siebold ex Koidz. - Japanese ᎣᏓᎸ ᎩᏔᏯ ᎠᎴ Japanese ᎦᏚᏏ ᎩᏔᏯ
+* ''[[Prunus japonica]]'' Thunb. - Korean ᎩᏔᏯ
+* ''[[Prunus laurocerasus]]'' L. - ᎩᏔᏯ laurel 
+* ''[[Prunus lyonii]]'' (Eastw.) Sarg. - Catalina [[Island|ᎤᎿᎷᏛᎢ]] ᎩᏔᏯ
+* ''[[Prunus maackii]]'' Rupr. - Manchurian ᎩᏔᏯ ᎠᎴ Amur ᏛᏯ
+* ''[[Prunus mahaleb]]'' L. - [[Saint Lucie cherry|ᎾᏍᏕᏅᎾ ᎷᏏᎠ ᎩᏔᏯ]], [[Rock cherry|ᏅᏯ]], [[Perfumed cherry|ᎠᎵᏍᏚᏟᏍᏗ ᎩᏔᏯ]] ᎠᎴ Mahaleb ᎩᏔᏯ
+* ''[[Prunus maximowiczii]]'' Rupr. - [[Miyama cherry|ᎻᏯᎹ ᎩᏔᏯ]] ᎠᎴ Korean ᎩᏔᏯ
+* ''[[Prunus mume]]'' (Siebold & Zucc.) Ume, Japanese [[apricot|ᎶᏂᎨ ᎠᏓᏛᏍᎩ]], Chinese [[plum|ᏆᏄᎾᏍᏗᎢ]]
+* ''[[Prunus myrtifolia]]'' (L.) Urb. - West Indian ᎩᏔᏯ
+* ''[[Prunus nepaulensis]]'' (Ser.) Steud. - Nepal ᏥᏍᏆ ᎩᏔᏯ
+* ''[[Prunus nipponica]]'' Matsum. - Takane ᎩᏔᏯ, [[Peak cherry|ᏫᎪᏍᏓᏴ ᎩᏔᏯ]] ᎠᎴ Japanese Alpine ᎩᏔᏯ
+* ''[[Prunus occidentalis]]'' Sw. - ᏭᏕᎵᎬᏗᏜ ᎩᏔᏯ laurel
+* ''[[Prunus padus]]'' L. - [[Bird cherry|ᏥᏍᏆ ᎩᏔᏯ]] ᎠᎴ European ᏥᏍᏆ ᎩᏔᏯ
 * ''[[Prunus pensylvanica]]'' L.f. - [[Pin cherry|ᎤᏍᏆᏘ ᎩᏔᏯ]], [[Fire cherry|ᎠᏥᎸ ᎩᏔᏯ]], ᎠᎴ [[Wild red cherry|ᎩᎦᎨ ᎩᏔᏯ ᎢᎾᎨ ᎡᎯ]]
 * ''[[Prunus pleuradenia]]'' Griseb. - Antilles ᎩᏔᏯ
-* ''[[Prunus prostrata]]'' Labill. - [[Mountain cherry|ᎣᏓᎸ ᎩᏔᏯ]], [[Rock cherry|ᏅᏯ]], Spreading cherry ᎠᎴ Prostrate cherry
-* ''[[Prunus pseudocerasus]]'' Lindl. - Chinese sour cherry ᎠᎴ False cherry
-* ''[[Prunus pumila]]'' L. - Sand cherry
-* ''[[Prunus rufa]]'' Wall ex Hook.f. - Himalayan cherry
-* ''[[Prunus salicifolia]]'' Kunth. - Capulin, Singapore cherry ᎠᎴ Tropic cherry
-* ''[[Prunus sargentii]]'' Rehder - Sargent's cherry ᎠᎴ [[Ezo Mountain cherry|ᎡᏦ ᎣᏓᎸ ᎩᏔᏯ]]
-* ''[[Prunus serotina]]'' Ehrh. - Black cherry
-* ''[[Prunus serrula]]'' Franch. - Paperbark cherry, Birch bark cherry ᎠᎴ Tibetan cherry
-* ''[[Prunus serrulata]]'' Lindl. - Japanese cherry, Hill cherry, Oriental cherry ᎠᎴ East Asian cherry
-* ''[[Prunus speciosa]]'' (Koidz.) Ingram - Oshima cherry
-* ''[[Prunus ssiori]]'' Schmidt- Hokkaido bird cherry
+* ''[[Prunus prostrata]]'' Labill. - [[Mountain cherry|ᎣᏓᎸ ᎩᏔᏯ]], [[Rock cherry|ᏅᏯ]], Spreading ᎩᏔᏯ ᎠᎴ Prostrate ᎩᏔᏯ
+* ''[[Prunus pseudocerasus]]'' Lindl. - Chinese sour ᎩᏔᏯ ᎠᎴ [[False cherry|ᎦᎶᏄᎼᏛ ᎩᏔᏯ]]
+* ''[[Prunus pumila]]'' L. - [[Sand cherry|ᏃᎭᏲ ᎩᏔᏯ]]
+* ''[[Prunus rufa]]'' Wall ex Hook.f. - Himalayan ᎩᏔᏯ
+* ''[[Prunus salicifolia]]'' Kunth. - Capulin, Singapore ᎩᏔᏯ ᎠᎴ Tropic ᎩᏔᏯ
+* ''[[Prunus sargentii]]'' Rehder - Sargent's ᎩᏔᏯ ᎠᎴ [[Ezo Mountain cherry|ᎡᏦ ᎣᏓᎸ ᎩᏔᏯ]]
+* ''[[Prunus serotina]]'' Ehrh. - [[Black cherry|ᎬᏂᎨ ᎩᏔᏯ]]
+* ''[[Prunus serrula]]'' Franch. - Paperbark ᎩᏔᏯ, [[Birch bark cherry|ᏗᏯᎶᏬᏍᎩ ᎤᏯᎸ ᎩᏔᏯ]] ᎠᎴ Tibetan ᎩᏔᏯ
+* ''[[Prunus serrulata]]'' Lindl. - Japanese ᎩᏔᏯ, [[Hill cherry|ᎦᏚᏏ ᎩᏔᏯ]], [[Oriental cherry|ᎠᏓᎶᏂᎨ ᎩᏔᏯ]] ᎠᎴ [[East Asian cherry|ᏗᎧᎸᎬᎢ ᎠᏓᎶᏂᎨ ᎩᏔᏯ]]
+* ''[[Prunus speciosa]]'' (Koidz.) Ingram - Oshima ᎩᏔᏯ
+* ''[[Prunus ssiori]]'' Schmidt- Hokkaido ᏥᏎᏆ ᎩᏔᏯ
 * ''[[Prunus stipulacea]]'' Maxim.
-* ''[[Prunus subhirtella]]'' Miq. - Higan cherry ᎠᎴ Spring cherry
-* ''[[Prunus takesimensis]]'' Nakai - Takeshima flowering cherry
-* ''[[Prunus tomentosa]]'' Thunb. - Nanking cherry, Manchu cherry, Downy cherry, Shanghai cherry, Ando cherry, [[Mountain cherry|ᎣᏓᎸ ᎩᏔᏯ]], Chinese dwarf cherry, Chinese bush cherry 
-* ''[[Prunus verecunda]]'' (Koidz.) Koehne - Korean mountain cherry
+* ''[[Prunus subhirtella]]'' Miq. - Higan ᎩᏔᏯ ᎠᎴ [[Spring cherry|ᎪᎨᏱ ᎩᏔᏯ]]
+* ''[[Prunus takesimensis]]'' Nakai - Takeshima [[flowering|ᎠᏥᎸᏍᎦ]] ᎩᏔᏯ
+* ''[[Prunus tomentosa]]'' Thunb. - Nanking ᎦᏔᏯ, Manchu ᎦᏔᏯ, Downy ᎩᏔᏯ, Shanghai ᎩᏔᏯ, [[Ando cherry|ᎠᏂᏙ ᎩᏔᏯ]], [[Mountain cherry|ᎣᏓᎸ ᎩᏔᏯ]], Chinese dwarf ᎩᏔᏯ, Chinese ᎤᏩᏱᏢᎢ ᎩᏔᏯ 
+* ''[[Prunus verecunda]]'' (Koidz.) Koehne - Korean ᎣᏓᎸ ᎩᏔᏯ
 * ''[[Prunus virginiana]]'' L. - [[Chokecherry|ᏛᏯ]]<ref>Banks, William H., Jr. ''Plants of the Cherokee.'' Gatlinburg, TN: Great Smoky Mountains Association, 2004: 62. ISBN 0-937207-43-8.</ref>
-* ''[[Prunus x yedoensis]]'' Matsum. - Yoshino cherry ᎠᎴ Tokyo cherry
+* ''[[Prunus x yedoensis]]'' Matsum. - [[Yoshino cherry|ᏲᏏᏃ ᎦᏔᏯ]] ᎠᎴ [[Tokyo cherry|ᏙᎦᏲ ᎩᏔᏯ]]
 
 ==ᏫᏓᏎᏄᎢ==
 <references/>
