--- a/ᎩᏔᏯ.mw
+++ b/ᎩᏔᏯ.mw
@@ -43,7 +43,7 @@
 * ''[[Prunus dawyckensis]]'' Sealy - Dawyck ᎩᏔᏯ
 * ''[[Prunus dielsiana]]'' C.K. Schneid. - Tailed-[[leaf|ᎤᎦᎶᎦ]] ᎩᏔᏯ
 * ''[[Prunus emarginata]]'' (Douglas ex Hook.) Walp. - [[Oregon cherry|ᎤᏩᎦᏂ ᎩᏔᏯ]], ᎠᎴ [[Bitter cherry|ᎤᏴᏍᏗ ᎩᏔᏯ]]
-* ''[[Prunus eminens]]'' Beck - (Semi-sour ᎩᏔᏯ)
+* ''[[Prunus eminens]]'' Beck - (Semi-ᎤᏩᏱᏢᎢ ᎩᏔᏯ)
 * ''[[Prunus fruticosa]]'' Pall. - European ᎤᏍᏗ ᎩᏔᏯ, [[Dwarf cherry|ᎤᏍᏗ ᎩᏔᏯ]], Mongolian ᎩᏔᏯ ᎠᎴ Steppe ᎩᏔᏯ
 * ''[[Prunus gondouinii]]'' (Poit. ᎠᎴ Turpin) Rehder - Duke ᎩᏔᏯ
 * ''[[Prunus grayana]]'' Maxim. - Japanese ᏥᏍᏆ ᎩᏔᏯ ᎠᎴ Gray's ᏥᏍᏆ ᎩᏔᏯ
@@ -66,7 +66,7 @@
 * ''[[Prunus pensylvanica]]'' L.f. - [[Pin cherry|ᎤᏍᏆᏘ ᎩᏔᏯ]], [[Fire cherry|ᎠᏥᎸ ᎩᏔᏯ]], ᎠᎴ [[Wild red cherry|ᎩᎦᎨ ᎩᏔᏯ ᎢᎾᎨ ᎡᎯ]]
 * ''[[Prunus pleuradenia]]'' Griseb. - Antilles ᎩᏔᏯ
 * ''[[Prunus prostrata]]'' Labill. - [[Mountain cherry|ᎣᏓᎸ ᎩᏔᏯ]], [[Rock cherry|ᏅᏯ]], Spreading ᎩᏔᏯ ᎠᎴ Prostrate ᎩᏔᏯ
-* ''[[Prunus pseudocerasus]]'' Lindl. - Chinese sour ᎩᏔᏯ ᎠᎴ [[False cherry|ᎦᎶᏄᎼᏛ ᎩᏔᏯ]]
+* ''[[Prunus pseudocerasus]]'' Lindl. - Chinese ᎤᏩᏱᏢᎢ ᎩᏔᏯ ᎠᎴ [[False cherry|ᎦᎶᏄᎼᏛ ᎩᏔᏯ]]
 * ''[[Prunus pumila]]'' L. - [[Sand cherry|ᏃᎭᏲ ᎩᏔᏯ]]
 * ''[[Prunus rufa]]'' Wall ex Hook.f. - Himalayan ᎩᏔᏯ
 * ''[[Prunus salicifolia]]'' Kunth. - Capulin, Singapore ᎩᏔᏯ ᎠᎴ Tropic ᎩᏔᏯ
