--- a/ᎠᎵᏍᏕᎸᏙᏗ_ᎠᏕᎸ_ᎬᏗ.mw
+++ b/ᎠᎵᏍᏕᎸᏙᏗ_ᎠᏕᎸ_ᎬᏗ.mw
@@ -85,6 +85,7 @@
 * [[Forex]]
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
+{{Commonscat|Finance}}
 <!--                                                             -->
 <!-- Do not add advertising or commercial links to this article. -->
 <!--                                                             -->
@@ -101,7 +102,7 @@
 <!-- Do not add advertising or commercial links to this article. -->
 <!--                                                             -->
 
-[[Category:ᎠᎵᏍᏕᎸᏙᏗ ᎠᏕᎸ ᎬᏗ| ]]
+[[Category:ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎩ]]
 
 [[an:Finanzas]]
 [[ar:تمويل]]
