--- a/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
+++ b/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
@@ -373,6 +373,9 @@ Greetings, please translate this message if you can.
 [[m:Fundraising 2010|Fundraising 2010]] is preparing to start, and we want your project to be a part of the global movement to support free knowledge.  The Wikimedia Foundation is engaging with local communities that build the projects to play an active part in this year's fundraiser.  This year we will be working to best serve all the language communities by providing messages that are best suited for each location.
 
 To do this, we need your help.  We are [[m:Fundraising_2010/Messages|testing messages]] and we want to be sure that our messages will work with your language.  If it does not and your community can come up with your own banner in the spirit of supporting free knowledge, we invite you to submit your proposals and be active in this process.  Wikimedia is for you, join us in supporting free knowledge in your local community!  [[User:Kpeterzell|Keegan, WMF Fundraiser 2010]] 05:00, 15 September 2010 (UTC)
+
+[[Category:ᏫᎩᏇᏗᏯ]]
+
 [[ang:Ƿicipǣdia:Þorpes Ƿiella]]
 [[cv:Broken/Канашлу]]
 [[de:Wikipedia:Fragen zur Wikipedia]]
