--- a/ᎠᎹ.mw
+++ b/ᎠᎹ.mw
@@ -84,7 +84,7 @@
 ᏄᏦᏍᏛᎾ ᎠᎴ environmentally ᎤᎵᏍᎨᏛ ᎠᎴ ᏧᏓᎴᎿᎢ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᎠᎹ ᎨᏒᎢ Ꮎ Ꮝ ᏧᏣᏔᏊ ᎠᎧᎵᏬᎯ ᎤᏙᏢᏒ, [[ice|ᎤᏁᏍᏓᎳ]], ᏓᎾᏛᏁᎵᏍᎬ ᎾᎿ Ꮝ ᎦᎾ ᎤᏙᏢᏒ. ᎪᎯ ᎠᎧᎵᏬᎯ ᏓᏓᏁᏟᏴᏎᎬ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏥᏄᏍᏗ ᎠᏫᏒᏗ ᏥᏄᏍᏗ ᎦᎾ ᎠᎹ, ᎤᏍᏆᎸᎲ ᎯᎠ ᏗᏎᏍᏗ ᏓᏍᏓᏅᏅ ᎯᎠ ᎤᎳᏂᎩᏓ ᎯᏠᎨᏃ ᏗᏚᎳᏙ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎪᏢᎯ ᎢᎪᏢᎯ ignelvhi ᎾᏍᎩ ᎤᏩᏒ ᎾᎾᎢ ᎡᎳᏗᎨ ᏄᏁᏌᏴᏢ. ᎾᏍᎩᎾᎢ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᏐᎢ ᏗᎧᏃᏗ ᎠᎴ ᎾᏍᎩᎾᎢ ᏂᎦᏛ ᏐᎢ 11 ᏓᎦᏘᎴᎬ ᏓᏓᏁᏟᏴᏎᎬ ᎠᎹ ᎤᏁᏍᏓᎳ ᎾᏍᎩ ᎤᏩᏒ ᎤᏁᏍᏓᎳ-XI, ᎯᎠ ᎠᎧᎵᏬᎯ ᎤᏙᏢᏒ ᎨᏒᎢ denser ᎬᎾᏬᏍᎬ ᎯᎠ ᎦᎾ ᎤᏙᏢᏒ. ᎢᏤᎢ ᎠᎹ ᎾᎾᎢ ᏰᎵᏊ ᏗᏙᎳᎩ ᎤᏃᎴ ᎤᎳᏂᎬᎬ ᎨᏒᎢ ᎤᎪᏗᏗ ᎠᏫᏒᏗ ᎾᎾᎢ 4&nbsp;°C, ᎠᎴ ᏫᎵ ᎡᎳᏗ ᎢᎦᎵᏍᏙᏗ ᎾᎥᎢ [[convection|ᏫᏓᏲᎯᏍᏗ]] ᏥᏄᏍᏗ ᎾᏍᎩ ᎤᏁᏌᏴᏟ Ꮎ ᏄᏁᏌᏴᏢ, ᎠᎴ ᎢᏳᏃ ᎾᏍᎩ ᏗᏙᎳᎩ ᎤᏟ ᎢᎦᎢ ᎤᏴᏢ ᎾᏍᎩ ᏫᎵ ᎤᎵᏌᎳᏙᏗ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ. ᎪᎯ ᏧᎾᏍᏗ ᏫᎵ ᏂᎬᏂᏏᏍᎬ ᎠᏍᏛᎩ ᎠᎹ ᏂᎦᏰᏙᎲ ᎤᏟ ᎤᎦᎾᏩ ᎬᎾᏬᏍᎬ ᎤᏟ ᎢᎦᎢ ᎤᏅᏬᏓ ᎤᏴᏢ ᎠᎹ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎤᏁᏍᏓᎳ ᎭᏫᎾᏗᏢ ᎠᏰᎸ ᎠᎹ ᏫᎵ ᎤᏙᏢᏒ ᎢᎬᏱ ᎾᎾᎢ ᎯᎠ ᎦᏚᎢ ᎠᎴ ᎡᎳᏗ ᎠᎵᎢᎵᏒ, ᎾᎯᏳᎢ ᎯᎠ ᎤᏂᎪᏗᏗ ᎯᎠ ᎠᎹ ᎧᏂᎬᎾᎥ ᏫᎵ ᏚᏂᏴ ᏂᎪᎯᎸ 4&nbsp;°C. ᎪᎯ ᎢᏳᎵᏍᏙᏗᏱ ᎠᎽᏰᎵ ᎥᏓᎵ ᎠᏯᏖᏃᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏴᏢ. ᎾᎯᏳᎢ ᎪᎯ ᎾᏛᏁᎲᎢ ᎠᎾᏍᎬᏘ ᎢᎦᏰᎵᏍᏗ ᎠᎬᏂ, ᎢᏧᎳᎭ ᎤᎾᎵᎪᏒ, ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ Ꮎ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᏐᎢ chemicals ᎠᎴ denser ᏥᏄᏍᏗ ᎠᎧᎵᏬᎯ ᎬᎾᏬᏍᎬ ᎤᏅᏌ ᎠᎴ ᏥᏄᏍᏗ ᎦᎾ, ᎠᎴ ᎤᏁᏍᏓᎳᏛᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎭᏫᏂ ᎦᎸᎳᏗᏢ.
 
 === ᎬᏙᏗ ᎠᎾᎦᎵᏍᎩ ᎤᎳᏂᎬᎬ ===
-ᏧᏣᏔᏊ ᎦᎵᏓᏍᏛ ᎬᏩᏚᏫᏛ ᎠᎹ ᎨᏒᎢ Ꮎ ᎾᏍᎩ ᎨᏒᎢ ᎤᎳᏂᎩᏛ ᏗᎦᏣᏄᎶ ᎤᎾᏣ [[electricity|ᎢᏳᏊ]], ᎬᏙᏗ ᎠᏁᎸᏙᏗ [[electric shock|ᎣᏍᏛᏗᏍᏗ]] ᏓᏃᏏᏏᏍᎬ ᎪᎯ ᎤᏂᎸᏉᏗ ᎤᏬᎯᏳᏒ. ᏂᎦᎵᏍᏗᏍᎬᎫ ᎬᏙᏗ ᎠᎾᎦᎵᏍᎩ properties ᎬᎪᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎠᎹ ᎠᎴ ᎤᏍᏆᎸᎲ ᎯᎠ [[ion|ᎢᏲᏁ]]ᎪᎢ ᎠᎹ ᎠᎴ [[carbon dioxide|ᎤᎦᏔ ᏅᏓᏳᏓᎴᏅ ᏬᏗᎨ (ᎧᏉᏂ ᏗᎣᏍᏏᏙ)]] dissolved ᎭᏫᎾᏗᏢ ᎾᏍᎩ. [[Self-ionization of water|ᎠᎹ ᎾᏛᏁ ᎣᏩᏒ-ionize]] ᎭᏢᏃ ᏔᎵ ᎠᎹ ᎠᏍᏓᏩᏛᏍᏗ ᏗᏙᎳᎩ ᏌᏊ [[hydroxide|ᎯᏠᏍᏏᏙ]] [[anion|ᎠᏂᏲᏁ]] ᎠᎴ ᏌᏊ [[hydronium|ᎯᏠᏂᏲ]] [[cation|ᎧᏘᏲᏂ]], ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵᏊ ᎠᏫᏛᏗ ᏰᎵᏊ [[electric current|ᎠᎾᎦᎵᏍᎩ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ]] ᎿᏛᎦ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎡᏍᎦ ᎢᎬᏁᎯ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᎠᏥᏰᎶᎲ. ᎤᏓᏅᎦᎸᏓ ᎠᎹ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ [[electrolysis|electrolyzed]] ᎾᎾᎯ ᎥᎴᏂᏙᎲ ᎠᎴ ᎯᏠᎨᏃ ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ ᎠᎴ ᏄᏠᏯᏍᏛᎾ ᏂᎦᎵᏍᏗᏍᎬᎫ dissolved ᏓᎢᏲᏁ, ᎪᎯ ᎨᏒᎢ ᎤᏙᎯᏳ ᎤᏍᎦᏃᎳ ᏧᎵᎬᏩᎳᏅᎯ ᎠᎴ ᎯᎠ ᎢᏴ ᎤᏙᎯᏳ ᎤᏍᏗ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎨᏒᎢ ᎾᏛᎾᏛᎩ nadvndhvgi. ᎯᎠ ᏄᏍᏛ ᎠᎩᏍᏗ advertised ᎭᏫᎾᏗᏢ [[spring water|ᎠᎹ ᎦᏄᎪᎬ ᎠᎹ]] ᎠᎴ [[mineral water|ᎪᎢ ᎠᎹ]] ᏗᎫᎪᏔᏅ ᏂᏛᎴᏅᏓ ᎯᎠ ᎪᎢ ᎡᏙᎠ, ᎾᎯᏳᎢ ᎤᏓᏅᎦᎸᏓ H<sub>2</sub>O ᎨᏒᎢ ᎤᏓᏂᎳ. ᏥᏄᏍᏗ ᏯᏛᎿ, [[purity|ᎬᏫᏍᏓᏗ]] ᎭᏫᎾᏗᏢ ᎠᎹ ᎦᏄᎪᎬ ᎠᎴ ᎪᎢ ᎠᎹ ᏩᏎᎯᎰᎢ ᎬᏫᏍᏓᏗ ᏂᏛᎴᏅᏓ [[toxin]], [[pollutant]], ᎠᎴ [[microorganism|ᎢᎦᎢ]].also when you drink it it cures u fom sickness.hot girls.
+ᏧᏣᏔᏊ ᎦᎵᏓᏍᏛ ᎬᏩᏚᏫᏛ ᎠᎹ ᎨᏒᎢ Ꮎ ᎾᏍᎩ ᎨᏒᎢ ᎤᎳᏂᎩᏛ ᏗᎦᏣᏄᎶ ᎤᎾᏣ [[electricity|ᎢᏳᏊ]], ᎬᏙᏗ ᎠᏁᎸᏙᏗ [[electric shock|ᎣᏍᏛᏗᏍᏗ]] ᏓᏃᏏᏏᏍᎬ ᎪᎯ ᎤᏂᎸᏉᏗ ᎤᏬᎯᏳᏒ. ᏂᎦᎵᏍᏗᏍᎬᎫ ᎬᏙᏗ ᎠᎾᎦᎵᏍᎩ properties ᎬᎪᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎠᎹ ᎠᎴ ᎤᏍᏆᎸᎲ ᎯᎠ [[ion|ᎢᏲᏁ]]ᎪᎢ ᎠᎹ ᎠᎴ [[carbon dioxide|ᎤᎦᏔ ᏅᏓᏳᏓᎴᏅ ᏬᏗᎨ (ᎧᏉᏂ ᏗᎣᏍᏏᏙ)]] dissolved ᎭᏫᎾᏗᏢ ᎾᏍᎩ. [[Self-ionization of water|ᎠᎹ ᎾᏛᏁ ᎣᏩᏒ-ionize]] ᎭᏢᏃ ᏔᎵ ᎠᎹ ᎠᏍᏓᏩᏛᏍᏗ ᏗᏙᎳᎩ ᏌᏊ [[hydroxide|ᎯᏠᏍᏏᏙ]] [[anion|ᎠᏂᏲᏁ]] ᎠᎴ ᏌᏊ [[hydronium|ᎯᏠᏂᏲ]] [[cation|ᎧᏘᏲᏂ]], ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵᏊ ᎠᏫᏛᏗ ᏰᎵᏊ [[electric current|ᎠᎾᎦᎵᏍᎩ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ]] ᎿᏛᎦ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᎡᏍᎦ ᎢᎬᏁᎯ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᎠᏥᏰᎶᎲ. ᎤᏓᏅᎦᎸᏓ ᎠᎹ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ [[electrolysis|electrolyzed]] ᎾᎾᎯ ᎥᎴᏂᏙᎲ ᎠᎴ ᎯᏠᎨᏃ ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ ᎠᎴ ᏄᏠᏯᏍᏛᎾ ᏂᎦᎵᏍᏗᏍᎬᎫ dissolved ᏓᎢᏲᏁ, ᎪᎯ ᎨᏒᎢ ᎤᏙᎯᏳ ᎤᏍᎦᏃᎳ ᏧᎵᎬᏩᎳᏅᎯ ᎠᎴ ᎯᎠ ᎢᏴ ᎤᏙᎯᏳ ᎤᏍᏗ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎨᏒᎢ ᎾᏛᎾᏛᎩ nadvndhvgi. ᎯᎠ ᏄᏍᏛ ᎠᎩᏍᏗ advertised ᎭᏫᎾᏗᏢ [[spring water|ᎠᎹ ᎦᏄᎪᎬ ᎠᎹ]] ᎠᎴ [[mineral water|ᎪᎢ ᎠᎹ]] ᏗᎫᎪᏔᏅ ᏂᏛᎴᏅᏓ ᎯᎠ ᎪᎢ ᎡᏙᎠ, ᎾᎯᏳᎢ ᎤᏓᏅᎦᎸᏓ H<sub>2</sub>O ᎨᏒᎢ ᎤᏓᏂᎳ. ᏥᏄᏍᏗ ᏯᏛᎿ, [[purity|ᎬᏫᏍᏓᏗ]] ᎭᏫᎾᏗᏢ ᎠᎹ ᎦᏄᎪᎬ ᎠᎴ ᎪᎢ ᎠᎹ ᏩᏎᎯᎰᎢ ᎬᏫᏍᏓᏗ ᏂᏛᎴᏅᏓ [[toxin]], [[pollutant]], ᎠᎴ [[microorganism|ᎢᎦᎢ]].
 
 == ᎯᎠ ᎾᎿ ᎦᏙᎬ ᎯᎠ ᎡᎶᎯ ᎦᏃᏢᎩ ᎠᎹ ==
 [[File:The_Earth_seen_from_Apollo_17.jpg|thumb|250px|ᎦᏬᎯᎸᏙᏗ ᏔᎵ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ  ᎯᎠ [[earth|ᎡᎶᎯ]] ᎤᏤᎵ ᎦᏚᎢ ᎨᏒᎢ ᎫᏝᎢ ᎬᏙᏗ ᎠᎹ, 97.2%  ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎢᎦᎢ ᎨᏒᎩ ᎯᎠ ᎯᏍᎩ [[ocean|ᎠᎺᏉᎯ]]. ᎯᎠ [[Antarctic ice sheet|ᏗᎦᏘᎸᏍᏗ ᎤᏁᏍᏓᎳ ᏗᎬᎯᏓ]], ᎢᎦᎢ ᏕᎨᏒᎢ 90%  ᏂᎦᏛ ᎢᏤᎢ ᎠᎹ ᎾᎿ ᎯᎠ ᎡᎶᎯ, ᎨᏒᎢ ᎬᎪᏩᏛᏗ ᎾᎾᎢ ᎯᎠ ᎭᏫᏂ. ᎤᏃᎴ ᎠᎹ ᎥᏝ ᎪᎱᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᏥᏄᏍᏗ [[cloud|ᎤᎶᎩᎸ]], contributing  ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ [[albedo]].]]
