--- a/ᏪᏌ.mw
+++ b/ᏪᏌ.mw
@@ -16,7 +16,7 @@
 | trinomial = ''Felis silvestris catus''
 | trinomial_authority = ([[Carolus Linnaeus|Linnaeus]], 1758)
 }}
-ᎯᎠ '''ᏪᏌ''' (ᎠᎴ '''ᏄᏍᏛ ᎤᏪᏅᏒ ᏪᏌ''', '''ᎦᎵᏦᏕ ᏪᏌ''') ᎨᏒᎢ ᎤᏍᏗ [[carnivore|ᎠᎵᏍᏓᏴᏗ]] [[mammal|gantlai]] ᎯᎠ subspecies ''[[Felis]] silvestris catus''.  ᎾᏍᎩ ᎨᏒᎢ ᎠᏛᏅᎢᏍᏔᏅ [[predator]] ᎠᎴ [[Animal cognition|ᎣᏍᏛ ᎠᎦᏔᎯ]] gantlai, ᎤᎾᏅᏛ ᎦᏃᎭᎵᏓᏍᏗ ᎦᏬᎯᎸᏙᏗ ᏌᏊ ᎠᎦᏴᎵ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ, ᎠᎴ ᏰᎵᏇ ᎢᎬᏁᏗ ᎠᎴᏂᏙᎲ ᎠᎨᏲᏅᎯ (ᎠᎴ ᎠᎾᏕᎶᏆᏍᎬ ᎾᎥᎢ ᎤᏩᏌᏊ) ᎠᏒᎾᏍᏗ ᏄᏦᏍᏛᎾ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᏯᏛᎿ ᏥᏄᏍᏗ ᏂᎬᏂᏏᏍᎬ-ᎤᏱᏙᎸᎩ ᏗᏍᏚᏗ ᎠᎴ ᎧᎵᏬᎯ ᎫᏢᎥᏍᎬ (ᎠᎪᏩᏛᏗ [[Cat intelligence|ᏪᏌ ᎪᎱᏍᏗ ᎨᏒ]]).  ᎾᏍᎩ ᎤᎭ ᎠᎴᏂᏙᎸ ᎭᏫᎾᏗᏢ ᎠᏍᏚᏗ ᎤᎾᎵᎪᏒ ᎬᏙᏗ [[human|ᏴᏫ]]ᎾᏍᎩᎾᎢ 3,500 8,000 ᏧᏕᏘᏴᏓ<ref>{{cite web|title = Speaking of Animals|accessdate = August 15|accessyear = 2005|url = http://www.judithstock.com/Speaking_of_Animals/History_of_Cats/history_of_cats.html}}</ref>, ᏓᎾᏎᎯᎲ ᏂᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[mythology|ᎤᏁᎳᏅᎯ]] ᎠᎴ [[legend|ᏄᎵᏍᏔᏂᏙᎸ]]ᎯᎸᏍᎩ ᎥᎦᏔᎲᎢ.
+ᎯᎠ '''ᏪᏌ''' (ᎠᎴ '''ᏄᏍᏛ ᎤᏪᏅᏒ ᏪᏌ''', '''ᎦᎵᏦᏕ ᎡᎯ ᏪᏌ''') ᎨᏒᎢ ᎤᏍᏗ [[carnivore|ᎠᎵᏍᏓᏴᏗ]] [[mammal|gantlai]] ᎯᎠ subspecies ''[[Felis]] silvestris catus''.  ᎾᏍᎩ ᎨᏒᎢ ᎠᏛᏅᎢᏍᏔᏅ [[predator]] ᎠᎴ [[Animal cognition|ᎣᏍᏛ ᎠᎦᏔᎯ]] gantlai, ᎤᎾᏅᏛ ᎦᏃᎭᎵᏓᏍᏗ ᎦᏬᎯᎸᏙᏗ ᏌᏊ ᎠᎦᏴᎵ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ, ᎠᎴ ᏰᎵᏇ ᎢᎬᏁᏗ ᎠᎴᏂᏙᎲ ᎠᎨᏲᏅᎯ (ᎠᎴ ᎠᎾᏕᎶᏆᏍᎬ ᎾᎥᎢ ᎤᏩᏌᏊ) ᎠᏒᎾᏍᏗ ᏄᏦᏍᏛᎾ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᏯᏛᎿ ᏥᏄᏍᏗ ᏂᎬᏂᏏᏍᎬ-ᎤᏱᏙᎸᎩ ᏗᏍᏚᏗ ᎠᎴ ᎧᎵᏬᎯ ᎫᏢᎥᏍᎬ (ᎠᎪᏩᏛᏗ [[Cat intelligence|ᏪᏌ ᎪᎱᏍᏗ ᎨᏒ]]).  ᎾᏍᎩ ᎤᎭ ᎠᎴᏂᏙᎸ ᎭᏫᎾᏗᏢ ᎠᏍᏚᏗ ᎤᎾᎵᎪᏒ ᎬᏙᏗ [[human|ᏴᏫ]]ᎾᏍᎩᎾᎢ 3,500 8,000 ᏧᏕᏘᏴᏓ<ref>{{cite web|title = Speaking of Animals|accessdate = August 15|accessyear = 2005|url = http://www.judithstock.com/Speaking_of_Animals/History_of_Cats/history_of_cats.html}}</ref>, ᏓᎾᏎᎯᎲ ᏂᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[mythology|ᎤᏁᎳᏅᎯ]] ᎠᎴ [[legend|ᏄᎵᏍᏔᏂᏙᎸ]]ᎯᎸᏍᎩ ᎥᎦᏔᎲᎢ.
 
 ᏪᏌ ᎦᎷᏨ ᎭᏫᎾᏗᏢ [[List of cat breeds|ᏔᎳᏚ  ᎠᏂᏁᏉᎬ]] ᎠᎴ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ.  ᎤᏍᏆᎸᎲ ᏧᎾᏍᏗ, ᎢᎦᏛ ᎠᎴ [[Sphynx (cat)|ᏗᏄᏪᏍᏗ]] ᎠᎴ ᎢᎦᏛ ᎠᎴ [[Manx (cat)|tailless]]. ᎤᏅᏌ ᎬᏙᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏌᏊ ᏍᎪᎯᏧᏈ ᎧᏁᎬ ᎤᏲᏴᎬ ᎠᎴ ᎢᏗᎦᎪᏘ ᎠᏰᎸ ᎦᏬᏂᎯᏍᏗ ᎾᏍᎩᎾᎢ ᏗᏛᎪᏔᏅ, ᎠᏠᏯᏍᏗᏍᎩ ᏓᏯᏂᏍᎬ ("ᎠᏠᏯᏍᏗ" ᎠᎴ "miaou"), [[purr|ᎠᏠᏯᏍᏗ]]ᎪᎯᏳᏙᏗ, [[hiss|ᏌᏌ]]ᎪᎯᏳᏙᏗ, [[growling|ᎠᏠᏯᏍᏗ]], [[chirp|ᎠᏠᏯᏍᏗ]]ᎪᎯᏳᏙᏗ, [[click|ᎠᎧᏁᏍᏗ]]ᎪᎯᏳᏙᏗ, ᎠᎴ [[grunt|ᎤᎵᏰᏗᏍᎬ]]ᎪᎯᏳᏙᏗ.<ref> [http://www.channel3000.com/news/1472741/detail.html Meows Mean More To Cat Lovers]. ''Channel3000.com''. Accessed [[June 14|ᏕᎭᎷᏱ 14]], [[2006]].</ref>  ᎾᏍᎩᏯᎢ ᎠᏂᏐᏈᎵ ᎠᎴ ᏐᎢ ᎫᏄᏡᏂ ᎡᎿᎢ ᎡᎥ, ᏪᏌ ᏰᎵᏇ ᏗᏙᎳᎩ [[feral cat|feral]], ᎠᎴᏂᏙᎲ ᎢᏳᎵᏍᏙᏗᏱ ᎭᏫᎾᏗᏢ ᎯᎠ ᎨᏯᏔᎯ, ᎭᏢᏃ, ᎠᎵᏍᎦᏁᏍᎩ ᎯᎠ ᎥᎦᏔᎲᎢ Ꮎ ᎤᏅᏌ ᎠᎴ ᎤᏤᎵᏛ ᎡᎿᎢ ᎡᎥ, ᎤᏅᏌ ᏫᎵ ᎢᏳᏓᎵᎭ ᎤᏙᏢᏒ ᎤᏍᏗ [[feral cat colony|colonies]].
 
