--- a/ᏂᎴ_ᎼᏔᏂ.mw
+++ b/ᏂᎴ_ᎼᏔᏂ.mw
@@ -1,5 +1,3 @@
  [[File:ᏂᎴ ᎼᏔᏂ.jpeg]]
 
-'''ᏂᎴ ᎼᏔᏂ'''
-
-ᏂᎴ ᎼᏔᏂ (neil morton grew up in Adair county.  He went to delonaga school.   He spent most of his life in Education.  He was a teacher of English, superintendent,  Dean of the College of Education at NSU and the Head of Education at Cherokee Nation.  He is married to Patsy Morton and they have two daughters and one son.
+'''ᏂᎵ ᎼᏔᏂ''' Adair ᎤᏛᏒᎯ.  ᏓᎶᏂᎨᏍᏛ ᏧᎾᏕᎶᏆᏍᏗ ᏧᏕᎶᏆᎥᎢ.  ᎡᎲ ᎢᎪᎯᏓ ᏗᎾᏕᎶᏆᏍᎩ ᏚᏍᏕᎸᎯᏙᎳ ᎠᎭᏂ ᎢᏁᏍᏳ ᎦᎸᎳᏗ ᏧᎾᏕᎶᏆᏍᏗᎢ.  ᎩᎵᏏ ᏚᏕᏲᏅ ᎠᎴ ᏧᏔᏘᎿᎢ ᎢᏳᎵᏍᏔᏅ ᏏᎵᏪᎵ ᎠᎴ ᎢᏁᏍᏳ ᏧᎾᏕᎶᏆᏍᏗᎢ.  ᎯᎠᏃ ᎾᏞᎬᏊ ᏥᎨᏒ ᎠᏂᏣᎳᎩᎯ ᏧᎾᏕᎶᏆᏍᏗ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᎿ ᏚᏍᏕᎸᎯᏙᎳ. Patsy Eads Morton ᏧᏙᎢᏓ ᎤᎾᏁᎳᏓ ᎠᎴ ᎪᎯ ᏥᎩ ᎠᏏ ᎠᏂᏁᎳ ᎠᎴ ᎠᏂᏔᎵ ᎠᏂᎨᏳᏣ ᏚᎾᏛᎯᏍᏔᎾ ᎠᎴ ᏌᏊ ᎠᏧᏣ.
