--- a/ᏴᏭᏁᎦ.mw
+++ b/ᏴᏭᏁᎦ.mw
@@ -1,5 +1,5 @@
 [[File:Masterpieces.jpg|thumb|ᏴᏭᏁᎦ ᏗᎪᏪᎵ]]
-'''ᏴᏭᏁᎦ''' '''ᎩᎵᏏ''' [[ᎦᏬᏂᎯᏍᏗ]]. ᎩᎵᏏᏃ ᎦᏬᏂᎯᏍᏗ ᎠᏰᎵ ᎤᏒᎧᎵ [[ᎠᎺᎢ]], ᎩᎵᏏ, [[ᎠᎤᏍᏞᎢᏯ]], ᎠᎴ ᎠᏂᏐᎢ.
+'''ᎩᎵᏏ''' ('''ᏴᏭᏁᎦ''') [[ᎦᏬᏂᎯᏍᏗ]]. ᎩᎵᏏᏃ ᎦᏬᏂᎯᏍᏗ ᎠᏰᎵ ᎤᏒᎧᎵ [[ᎠᎺᎢ]], ᎩᎵᏏ, [[ᎠᎤᏍᏞᎢᏯ]], ᎠᎴ ᎠᏂᏐᎢ.
 
 ==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
 {{Commonscat|English language}}
