--- a/ᎠᏂᏍᏫᏗ_ᎦᏬᏂᎯᏍᏗ.mw
+++ b/ᎠᏂᏍᏫᏗ_ᎦᏬᏂᎯᏍᏗ.mw
@@ -1,5 +1,5 @@
 [[Image:Svenska spåkets utbredning.PNG|300px|right]]
-'''ᏑᏪᏗ''' ([[ᎦᏬᏂᎯᏍᏗ]])
+'''ᎤᎦᎾᏍᏔ''' ᎦᏬᏂᎯᏍᏗ [[Sweden|ᎠᏂᎤᎦᎾᏍᏙ]]. 10,000,000 ᎠᏂᏴᏫ ᎤᎦᎾᏍᏔ ᎦᏬᏂᎯᏍᏗ ᎠᏂᏬᏂᎭ.
 {| class="wikitable" style="border=1px solid grey;"
 ! ᏣᎳᎩ !! ᏑᏪᏗ
 |-
@@ -17,9 +17,8 @@
 |-
 |}
 
-
 [[Category:ᏳᎳᏛ]]
-[[Category:Questionably transliterated titles]]
+[[Category:ᎦᏬᏂᎯᏍᏗ]]
 {{stub}}
 
 [[af:Sweeds]]
