--- a/ᎤᎾᎩᎾ.mw
+++ b/ᎤᎾᎩᎾ.mw
@@ -4,7 +4,7 @@
 | image = American_Chestnut.JPG
 | image_width = 240px
 | image_caption = American Chestnut leaves and nuts
-| regnum = [[Plant|ᎦᎪᏘae]]
+| regnum = [[Plant]]
 | divisio = [[flowering plant|Magnoliophyta]]
 | classis = [[dicotyledon|Magnoliopsida]]
 | ordo = [[Fagales]]
@@ -15,7 +15,7 @@
 | binomial_authority = (Marsh.) Borkh.
 }}
 
-ᎯᎠ '''ᏴᏩᏁᎬ ᎤᎾᎩᎾ''' (''Castanea dentata'') ᏥᏄᏍᏛᎩ ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᎠᏙᎯ ᎢᎾᎨ ᏕᏡᎬ ᏂᎦᏅᎯᏒ ᎤᏣᏘ ᎯᎠ ᎧᎸᎬᎢᏗᏢ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎠᎴ southeasternmost [[Canada]]. ᎤᎵᏍᏓᎯᎨ ᎠᏛᏏᏒ [[deciduous|ᎠᏓᏁᎳᏅᎯ]] hardwood ᏡᎬ, ᎾᏍᎩ ᎾᏍᎩ ᏭᎷᏨᎩ ᎦᎸᎳᏗᏢ 30-45 ᎠᏎᎯᎯ (100-150 ft) ᎢᏅ ᎢᎦᏘ ᎠᎴ 3 ᎠᏎᎯᎯ (10 ft) ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎠᎴ ranged ᏂᏛᎴᏅᏓ [[Maine]] ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ [[Ontario]] [[Mississippi]], ᎠᎴ ᏂᏛᎴᏅᏓ ᎯᎠ [[Atlantic]] ᎠᎹᏳᎸᏗ ᎯᎠ [[Appalachian Mountains|Appalachian ᏙᏓᎸ]] ᎠᎴ ᎯᎠ [[Ohio Valley|Ohio ᎤᎨᏓᎵᏴ]]. ᎾᎿᎢ ᎠᎴ ᎯᎸᏍᎩ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ [[chestnut|ᎤᎾᎩᎾ]] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ European [[Sweet Chestnut|ᎤᎦᎾᏍᏛ ᎤᎾᎩᎾ]], [[Chinese Chestnut|Chinese ᎤᎾᎩᎾ]] ᎠᎴ [[Japanese Chestnut|Japanese ᎤᎾᎩᎾ]], ᎦᏙ ᎤᏍᏗ ᎠᎴ ᏧᏓᎴᎿᎢ ᎾᏍᎩ ᎤᏩᏒ ᎬᏙᏗ ᎤᏦᎠᏎᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᏴᏩᏁᎬ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ''C. dentata'' ᏰᎵᏇ ᎾᏍᏋ ᎣᎯᏍᏗ identified ᎾᎥᎢ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏂᎬᎢ spaced ᎤᎪᎲᎩ-ᏕᎦᏅᏙᎬ ᎾᎿ ᎯᎠ ᎠᏍᏛᎢ Ꮝ ᏧᎦᎶᎦ, ᏥᏄᏍᏗ ᎤᏓᏎᎮᎸ ᎾᎥᎢ ᎯᎠ ᎠᏏᎾᏍᏛ ᏚᏙᎥ ''dentata'', Latin ᎾᏍᎩᎾᎢ "ᎪᏍᏓᏱ". ᎯᎠ [[leaf|ᏧᎦᎶᎦ]], ᎦᏙ ᎤᏍᏗ ᎠᎴ 14-20 centimeters (5-8 ᎭᏫᎾᏗᏢ) ᎦᏅᎯᏓ ᎠᎴ 7-10 centimeters (3-4 ᎭᏫᎾᏗᏢ) ᎠᏯᏖᎾ, ᎾᏍᎩ ᎾᏍᏇ ᏫᏚᏳᎪᏛ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᎠᏍᏓᏩᏛᏍᏗ ᏍᏆᎵᎯᎨᏍᏗ ᎠᎴ broader ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎯᎠ ᎤᎦᎾᏍᏛ ᎤᎾᎩᎾ. ᎯᎠ ᎠᏲᎶᎬ ᏗᎦᏘᎸᏍᏗ Chinese ᎤᎾᎩᎾ ᎨᏒᎢ ᎯᎠ ᎤᎪᏗᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎦᎧᏅ ᎤᎾᎩᎾ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ ᎯᎠ Ꭴ.. ᎾᏍᎩ ᏰᎵᏇ ᎾᏍᏋ ᎠᏥᎸᏉᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎾᎥᎢ Ꮝ ᎤᏭᏯᏛ ᎢᎦᏛ ᎠᎦᏚᏕᏍᏗ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ ᎯᎠ ᏗᏄᏪᏍᏗ ᎢᎦᏛ ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ. ᎯᎠ ᎤᎾᎩᎾ ᎠᎴ ᎭᏫᎾᏗᏢ ᎯᎠ beech ᏏᏓᏁᎸᎯ ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[beech]] ᎠᎴ [[oak|ᏧᏍᎦ]], ᎠᎴ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ ᏐᏈᎵ-ᎤᎾᎩᎾ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏏᏓᏁᎸᎯ [[Sapindaceae]].
+ᎯᎠ '''ᏴᏩᏁᎬ ᎤᎾᎩᎾ''' (''Castanea dentata'') ᏥᏄᏍᏛᎩ ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᎠᏙᎯ ᎢᎾᎨ ᏕᏡᎬ ᏂᎦᏅᎯᏒ ᎤᏣᏘ ᎯᎠ ᎧᎸᎬᎢᏗᏢ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎠᎴ southeasternmost [[Canada|ᎨᎾᏓ]]. ᎤᎵᏍᏓᎯᎨ ᎠᏛᏏᏒ [[deciduous|ᎠᏓᏁᎳᏅᎯ]] hardwood ᏡᎬ, ᎾᏍᎩ ᎾᏍᎩ ᏭᎷᏨᎩ ᎦᎸᎳᏗᏢ 30-45 ᎠᏎᎯᎯ (100-150 ft) ᎢᏅ ᎢᎦᏘ ᎠᎴ 3 ᎠᏎᎯᎯ (10 ft) ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎠᎴ ranged ᏂᏛᎴᏅᏓ [[Maine|ᎺᏂ]] ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ [[Ontario]] [[Mississippi|ᎻᏏᏏᏈ]], ᎠᎴ ᏂᏛᎴᏅᏓ ᎯᎠ [[Atlantic]] ᎠᎹᏳᎸᏗ ᎯᎠ [[Appalachian Mountains|Appalachian ᏙᏓᎸ]] ᎠᎴ ᎯᎠ [[Ohio Valley|Ohio ᎤᎨᏓᎵᏴ]]. ᎾᎿᎢ ᎠᎴ ᎯᎸᏍᎩ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎤᎾᎩᎾ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ European [[Sweet Chestnut|ᎤᎦᎾᏍᏛ ᎤᎾᎩᎾ]], [[Chinese Chestnut|ᏓᎶᏂᎨ ᎤᎾᎩᎾ]] ᎠᎴ [[Japanese Chestnut|ᏣᏩᏂᏏ ᎤᎾᎩᎾ]], ᎦᏙ ᎤᏍᏗ ᎠᎴ ᏧᏓᎴᎿᎢ ᎾᏍᎩ ᎤᏩᏒ ᎬᏙᏗ ᎤᏦᎠᏎᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᏴᏩᏁᎬ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ''C. dentata'' ᏰᎵᏇ ᎾᏍᏋ ᎣᎯᏍᏗ identified ᎾᎥᎢ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏂᎬᎢ spaced ᎤᎪᎲᎩ-ᏕᎦᏅᏙᎬ ᎾᎿ ᎯᎠ ᎠᏍᏛᎢ Ꮝ ᏧᎦᎶᎦ, ᏥᏄᏍᏗ ᎤᏓᏎᎮᎸ ᎾᎥᎢ ᎯᎠ ᎠᏏᎾᏍᏛ ᏚᏙᎥ ''dentata'', [[Latin|ᎳᏗᎾ]] ᎾᏍᎩᎾᎢ "ᎪᏍᏓᏱ". ᎯᎠ [[leaf|ᏧᎦᎶᎦ]], ᎦᏙ ᎤᏍᏗ ᎠᎴ 14-20 centimeters (5-8 ᎭᏫᎾᏗᏢ) ᎦᏅᎯᏓ ᎠᎴ 7-10 centimeters (3-4 ᎭᏫᎾᏗᏢ) ᎠᏯᏖᎾ, ᎾᏍᎩ ᎾᏍᏇ ᏫᏚᏳᎪᏛ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᎠᏍᏓᏩᏛᏍᏗ ᏍᏆᎵᎯᎨᏍᏗ ᎠᎴ broader ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎯᎠ ᎤᎦᎾᏍᏛ ᎤᎾᎩᎾ. ᎯᎠ ᎠᏲᎶᎬ ᏗᎦᏘᎸᏍᏗ ᏓᎶᏂᎨ ᎤᎾᎩᎾ ᎨᏒᎢ ᎯᎠ ᎤᎪᏗᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎦᎧᏅ ᎤᎾᎩᎾ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ ᎯᎠ Ꭴ.. ᎾᏍᎩ ᏰᎵᏇ ᎾᏍᏋ ᎠᏥᎸᏉᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎾᎥᎢ Ꮝ ᎤᏭᏯᏛ ᎢᎦᏛ ᎠᎦᏚᏕᏍᏗ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ ᎯᎠ ᏗᏄᏪᏍᏗ ᎢᎦᏛ ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ. ᎯᎠ ᎤᎾᎩᎾ ᎠᎴ ᎭᏫᎾᏗᏢ ᎯᎠ beech ᏏᏓᏁᎸᎯ ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[beech]] ᎠᎴ [[oak|ᏧᏍᎦ]], ᎠᎴ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ ᏐᏈᎵ-ᎤᎾᎩᎾ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏏᏓᏁᎸᎯ [[Sapindaceae]].
 
 [[File:AmericanChestnutPollen.JPG|thumb|left|ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎠᏍᎦᏯ (pollen) catkins]]
 ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎨᏒᎢ ᎠᏛᎯᏍᏙᏗ ᎠᏱᏙᎯ [[nut (fruit)|ᎣᏍᏛ]], ᎤᏠᏱᎭ ᎬᏙᏗ ᏦᎢ ᎣᏍᏛ ᎠᏠᏯᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎪᏍᏓᏱ ᎢᏤ ᎢᏳᏍᏗ ᎤᏂᏍᏗᎸᎢᏍᏗ, ᎠᎴ ᎠᏰᎦᎶᏛ ᎭᏫᎾᏗᏢ ᏅᏙ ᎤᎴᏴᏔᏅ ᏓᏫᏍᎦᎨ ᎠᏄᏬ. ᎯᎠ ᎣᏍᏛ ᎤᏙᎷᏬᏗ ᏗᎬᏩᎶᏒ ᎣᏂᏱᏳ ᎪᎨᏱ, ᎯᎠ ᎤᏂᏍᏗᎸᎢᏍᏗ ᎠᏍᏚᎢᏍᎬ ᎠᎴ ᎦᎶᏍᎬ ᎯᎠ ᎦᏙᎯ ᎾᎥᏂᎨ ᎯᎠ ᎢᎬᏱ ᎤᎶᏒᎩ ᎤᏯᏨᏒ. 
@@ -24,17 +24,17 @@
 
 == ᎤᎾᎩᎾ ᎠᏲᎶᎬ ==
 [[File:Castanea_dentata.JPG|thumb|right|ᎠᏲᎵ ᏡᎬ ᎭᏫᎾᏗᏢ ᏂᎬᏩᏍᏛ ᏗᎦᎶᎪᏗ]]
-ᏌᏊ ᎢᏳᏩᎫᏗ ᎤᎵᏍᎨᏛ hardwood ᎠᏙᎯ ᏡᎬ, ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ ᏄᏍᏛ ᏁᎵᏍᎬ [[chestnut blight|ᎤᎾᎩᎾ ᎠᏲᎶᎬ]], ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ Asian ᎤᏯᎸ ᏂᎯ (''Cryphonectria parasitica'', ᏧᏩᎦᏔᏅᏍ ''Endothia parasitica'') ᎤᏝᏅᏓᏕᎲ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎠᎺᎵᎨ ᎾᎿ imported Asiatic ᎤᎾᎩᎾ ᏕᏡᎬ. ᎯᎠ ᎥᏳᎩ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᎤᏕᎶᎰᏒ ᎾᎿ ᏴᏩᏁᎬ Chestut ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ [[Bronx Zoo|Bronx ᏧᏓᎴᏅᏓ ᎠᏯᏛ]] ᎭᏫᎾᏗᏢ 1904. ᎾᎯᏳᎢ Chinese ᎤᎾᎩᎾ ᏚᏙᎳᏩᏛᎲ ᎬᏙᏗ ᎯᎠ ᎠᏲᎶᎬ ᎠᎴ ᎠᎴ ᎤᏠᏱᎭ ᎬᏩᏠᎯᏍᏗ ᏂᎨᏒᎾ, ᎯᎠ airborne ᎤᏯᎸ ᏂᎯ ᎠᏰᏍᏛᏗ 50 ᎢᏳᏟᎶᏛ ᏑᏕᏘᏴᏓ ᎠᎴ ᎭᏫᎾᏗᏢ ᎦᏲᎵ ᎯᏍᎩ girdled ᎠᎴ ᎠᏥᎸᎩ ᎯᏍᎩ ᏴᏩᏁᎬ ᎤᎾᎩᎾ. ᎢᏤ ᏗᏍᏓᏲᏍᏗ ᎢᏳᏓᎵᎭ ᏚᏱᏢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏄᎬᏫᏳᏒ ᎤᏩᏂᎦᎸ ᎠᏲᎱᎯᏍᏗ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ ᏗᏙᎳᎩ ᎠᎧᎵᏏᏐᏗ. ᏱᏂᎬᏛᎾ, ᎯᎠ ᎤᏂᏜᎬ ᏚᏱᏢ ᎢᏅᎯ ᎢᏳᏓᎵ ᎠᏙᏯᏅᎯᏗᏍᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ 6 ᎠᏎᎯᎯ (20 ft) ᎭᏫᎾᏗᏢ ᏂᎦᏛᎢ ᎤᏓᎷᎸ ᎠᏲᎶᎬ ᎥᏳᎩ ᎢᎦᎷᎦ.
+ᏌᏊ ᎢᏳᏩᎫᏗ ᎤᎵᏍᎨᏛ hardwood ᎠᏙᎯ ᏡᎬ, ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ ᏄᏍᏛ ᏁᎵᏍᎬ [[chestnut blight|ᎤᎾᎩᎾ ᎠᏲᎶᎬ]], ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ Asian ᎤᏯᎸ ᏂᎯ (''Cryphonectria parasitica'', ᏧᏩᎦᏔᏅᏍ ''Endothia parasitica'') ᎤᏝᏅᏓᏕᎲ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎠᎺᎵᎨ ᎾᎿ imported Asiatic ᎤᎾᎩᎾ ᏕᏡᎬ. ᎯᎠ ᎥᏳᎩ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᎤᏕᎶᎰᏒ ᎾᎿ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ [[Bronx Zoo|Bronx ᏧᏓᎴᏅᏓ ᎠᏯᏛ]] ᎭᏫᎾᏗᏢ 1904. ᎾᎯᏳᎢ ᏓᎶᏂᎨ ᎤᎾᎩᎾ ᏚᏙᎳᏩᏛᎲ ᎬᏙᏗ ᎯᎠ ᎠᏲᎶᎬ ᎠᎴ ᎠᎴ ᎤᏠᏱᎭ ᎬᏩᏠᎯᏍᏗ ᏂᎨᏒᎾ, ᎯᎠ airborne ᎤᏯᎸ ᏂᎯ ᎠᏰᏍᏛᏗ 50 ᎢᏳᏟᎶᏛ ᏑᏕᏘᏴᏓ ᎠᎴ ᎭᏫᎾᏗᏢ ᎦᏲᎵ ᎯᏍᎩ girdled ᎠᎴ ᎠᏥᎸᎩ ᎯᏍᎩ ᏴᏩᏁᎬ ᎤᎾᎩᎾ. ᎢᏤ ᏗᏍᏓᏲᏍᏗ ᎢᏳᏓᎵᎭ ᏚᏱᏢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏄᎬᏫᏳᏒ ᎤᏩᏂᎦᎸ ᎠᏲᎱᎯᏍᏗ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ ᏗᏙᎳᎩ ᎠᎧᎵᏏᏐᏗ. ᏱᏂᎬᏛᎾ, ᎯᎠ ᎤᏂᏜᎬ ᏚᏱᏢ ᎢᏅᎯ ᎢᏳᏓᎵ ᎠᏙᏯᏅᎯᏗᏍᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ 6 ᎠᏎᎯᎯ (20 ft) ᎭᏫᎾᏗᏢ ᏂᎦᏛᎢ ᎤᏓᎷᎸ ᎠᏲᎶᎬ ᎥᏳᎩ ᎢᎦᎷᎦ.
 
-ᎾᏍᎩ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᏎᏍᏗ ᎤᎾᎩᎾ ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ ᏥᏄᏍᏛᎩ ᎦᏬᎯᎸᏙᏗ 3 ᎯᏍᎩ, ᎠᎴ Ꮎ 25 ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ ᎯᎠ ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ Appalachian ᏙᏓᎸ ᎨᏒᎩ ᏴᏩᏁᎬ ᎤᎾᎩᎾ. ᎯᎠ ᏎᏍᏗ ᎡᏆ ᏩᎵᏃᎯᏯᏍᎬ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏕᏡᎬ ᎦᏬᎯᎸᏙᏗ 60 cm (24 ᎭᏫᎾᏗᏢ) ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎭᏫᏂᏗᏢ ᎯᎠ ᏡᎬ ᎤᏤᎵ ᎠᎴᏅᏔᏅ ᎠᏍᏓᏅᏅ ᎨᏒᎢ ᏄᏓᎷᎸᎾ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 100. ᎤᎪᏗᏗ ᎦᎧᏅ ᎤᎾᎩᎾ ᏕᏡᎬ (featured ᎭᏫᎾᏗᏢ ''ᎬᎾᏕᎾ Geographic'') ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[Sherwood, Oregon]], ᎣᏂ ᏧᏩᎫᏛ ᎤᏣᏘ ᏭᏕᎵᎬᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ ᎨᏒᎢ ᏙᎢ ᎠᏎᏊᎢ ᎠᏲᎶᎬ. ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎣᏍᏛ ᎢᏳᏅᏁᎯ ᏥᏄᏍᏗ ᎢᏅ ᎤᏴᏢ ᏥᏄᏍᏗ [[Revelstoke]], [[British Columbia|ᎩᎵᏏ Columbia]].
+ᎾᏍᎩ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᏎᏍᏗ ᎤᎾᎩᎾ ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ ᏥᏄᏍᏛᎩ ᎦᏬᎯᎸᏙᏗ 3 ᎯᏍᎩ, ᎠᎴ Ꮎ 25 ᏌᏊ ᎢᎦᏛ ᎤᏃᏍᏛ ᎯᎠ ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ Appalachian ᏙᏓᎸ ᎨᏒᎩ ᏴᏩᏁᎬ ᎤᎾᎩᎾ. ᎯᎠ ᏎᏍᏗ ᎡᏆ ᏩᎵᏃᎯᏯᏍᎬ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏕᏡᎬ ᎦᏬᎯᎸᏙᏗ 60 cm (24 ᎭᏫᎾᏗᏢ) ᎭᏫᎾᏗᏢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎭᏫᏂᏗᏢ ᎯᎠ ᏡᎬ ᎤᏤᎵ ᎠᎴᏅᏔᏅ ᎠᏍᏓᏅᏅ ᎨᏒᎢ ᏄᏓᎷᎸᎾ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 100. ᎤᎪᏗᏗ ᎦᎧᏅ ᎤᎾᎩᎾ ᏕᏡᎬ (featured ᎭᏫᎾᏗᏢ ''ᎬᎾᏕᎾ Geographic'') ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[Sherwood, Oregon|Sherwood, ᎤᏩᎦᏂ]], ᎣᏂ ᏧᏩᎫᏛ ᎤᏣᏘ ᏭᏕᎵᎬᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ ᎨᏒᎢ ᏙᎢ ᎠᏎᏊᎢ ᎠᏲᎶᎬ. ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎣᏍᏛ ᎢᏳᏅᏁᎯ ᏥᏄᏍᏗ ᎢᏅ ᎤᏴᏢ ᏥᏄᏍᏗ [[Revelstoke]], [[British Columbia|ᎩᎵᏏ Columbia]].
 
 [[File:Castanea_dentata_field_trial.jpg|thumb|left|ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏠᎨᏏ ᎠᏥᎵᏱᏙᎲ sapling ᏂᏛᎴᏅᏓ ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏙᎦᏟᏐᏗ ᎦᎫᏍᏓᎥ]]
-ᎯᎸᏍᎩ ᏧᎾᏙᏢᎯ ᎠᎴ ᎠᏁᎶᏗᏍᎩ ᎠᏂᏁᏉᎬ ᎠᏲᎶᎬ-ᏗᎦᏘᎸᏍᏗ ᎤᎾᎩᎾ. ᏌᏊ ᎾᏍᎩ ᎯᎠ ᎨᏒᎢ ᎯᎠ [[American Chestnut Cooperators Foundation|ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏙᎦᏟᏐᏗ ᎦᎫᏍᏓᎥ]], ᎦᏙ ᎤᏍᏗ ᎠᏂᏁᏉᎬ ᏩᎵᏃᎯᏯᏍᎬ ᏂᎦᏛ-ᏴᏩᏁᎬ ᎤᎾᎩᎾ, ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎤᎾᏓᏎᎮᎸᎩ ᎢᎦᏛ ᎾᏰᎯᏯ ᏗᎦᏘᎸᏍᏗ ᎠᏲᎶᎬ. ᎯᎠ [[Canadian Chestnut Council|ᎦᏁᎳ ᎤᎾᎩᎾ ᏗᏂᎳᏫᎩ]] ᎨᏒᎢ ᎤᎾᏙᏢᎯ ᎠᏁᎶᏗᏍᎩ reintroduce ᎯᎠ ᏕᏡᎬ ᎭᏫᎾᏗᏢ Canada, ᎢᎬᏱᏗᏢ ᎭᏫᎾᏗᏢ [[Ontario]]. ᏄᏓᎴ ᎨᏒᎢ [[The American Chestnut Foundation|ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎦᎫᏍᏓᎥ]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ backcrossing ᎠᏲᎶᎬ-ᏗᎦᏘᎸᏍᏗ ᏴᏩᏁᎬ ᎤᎾᎩᎾ × Chinese ᎤᎾᎩᎾ ᏧᏠᎯᏍᏗ ᏴᏩᏁᎬ ᎠᏓᎦᏴᎵᎨ, ᎠᏢᏔᏍᏗ ᎯᎠ ᏴᏩᏁᎬ ᎤᏛᏏᏗᏒ ᎨᎦᏓᏅᏖᏗ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᎦᎴᏴᏗᏍᎬᎢ, ᎠᎴ ᎾᎯᏳᎢ ᏭᎵᏍᏆᏛ intercrossing ᎯᎠ ᎠᏓᏌᎳᏙᏗ ᎤᎾᏁᎶᏔᏅ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᏂᏁᏉᎬ ᎤᏠᏱᎭ ᎾᏍᎩᎾᎢ ᎠᏲᎶᎬ ᏗᎦᏘᎸᏍᏗ. ᎯᎠ ᎤᎵᏍᏛ ᎨᏒᎢ ᏭᎵᏱᎶᎸ reintroduce ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎠᏙᎯ ᎢᎾᎨ ᎤᏴᏢ ᎠᎺᎵᎨ. ᎭᏫᎾᏗᏢ 2005, ᏧᏠᎯᏍᏗ ᏡᎬ ᎬᏙᏗ ᎾᏍᎩ ᎤᎪᏗᏗ ᏴᏩᏁᎬ genes ᏥᏄᏍᏛᎩ ᎦᎧᏅ ᎾᎿ ᎯᎠ ᎣᏂ ᎯᎠ [[White House|ᎤᏁᎬ ᎦᎵᏦᏕ]], ᎠᎴ ᎢᏳ ᎢᎪᎯ ᎨᏒᎢ ᎾᎾᏛᏁᎲ ᎤᏙᎯᏳ ᎠᏔᎴᏒ ᎠᎹᏱ.
+ᎯᎸᏍᎩ ᏧᎾᏙᏢᎯ ᎠᎴ ᎠᏁᎶᏗᏍᎩ ᎠᏂᏁᏉᎬ ᎠᏲᎶᎬ-ᏗᎦᏘᎸᏍᏗ ᎤᎾᎩᎾ. ᏌᏊ ᎾᏍᎩ ᎯᎠ ᎨᏒᎢ ᎯᎠ [[American Chestnut Cooperators Foundation|ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏙᎦᏟᏐᏗ ᎦᎫᏍᏓᎥ]], ᎦᏙ ᎤᏍᏗ ᎠᏂᏁᏉᎬ ᏩᎵᏃᎯᏯᏍᎬ ᏂᎦᏛ-ᏴᏩᏁᎬ ᎤᎾᎩᎾ, ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎤᎾᏓᏎᎮᎸᎩ ᎢᎦᏛ ᎾᏰᎯᏯ ᏗᎦᏘᎸᏍᏗ ᎠᏲᎶᎬ. ᎯᎠ [[Canadian Chestnut Council|ᎦᏁᎳ ᎤᎾᎩᎾ ᏗᏂᎳᏫᎩ]] ᎨᏒᎢ ᎤᎾᏙᏢᎯ ᎠᏁᎶᏗᏍᎩ reintroduce ᎯᎠ ᏕᏡᎬ ᎭᏫᎾᏗᏢ [[Canada|ᎨᎾᏓ]], ᎢᎬᏱᏗᏢ ᎭᏫᎾᏗᏢ [[Ontario]]. ᏄᏓᎴ ᎨᏒᎢ [[The American Chestnut Foundation|ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎦᎫᏍᏓᎥ]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ backcrossing ᎠᏲᎶᎬ-ᏗᎦᏘᎸᏍᏗ ᏴᏩᏁᎬ ᎤᎾᎩᎾ × ᏓᎶᏂᎨ ᎤᎾᎩᎾ ᏧᏠᎯᏍᏗ ᏴᏩᏁᎬ ᎠᏓᎦᏴᎵᎨ, ᎠᏢᏔᏍᏗ ᎯᎠ ᏴᏩᏁᎬ ᎤᏛᏏᏗᏒ ᎨᎦᏓᏅᏖᏗ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᎦᎴᏴᏗᏍᎬᎢ, ᎠᎴ ᎾᎯᏳᎢ ᏭᎵᏍᏆᏛ intercrossing ᎯᎠ ᎠᏓᏌᎳᏙᏗ ᎤᎾᏁᎶᏔᏅ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᏂᏁᏉᎬ ᎤᏠᏱᎭ ᎾᏍᎩᎾᎢ ᎠᏲᎶᎬ ᏗᎦᏘᎸᏍᏗ. ᎯᎠ ᎤᎵᏍᏛ ᎨᏒᎢ ᏭᎵᏱᎶᎸ reintroduce ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎠᏙᎯ ᎢᎾᎨ ᎤᏴᏢ ᎠᎺᎵᎨ. ᎭᏫᎾᏗᏢ 2005, ᏧᏠᎯᏍᏗ ᏡᎬ ᎬᏙᏗ ᎾᏍᎩ ᎤᎪᏗᏗ ᏴᏩᏁᎬ genes ᏥᏄᏍᏛᎩ ᎦᎧᏅ ᎾᎿ ᎯᎠ ᎣᏂ ᎯᎠ [[White House|ᎤᏁᎬ ᎦᎵᏦᏕ]], ᎠᎴ ᎢᏳ ᎢᎪᎯ ᎨᏒᎢ ᎾᎾᏛᏁᎲ ᎤᏙᎯᏳ ᎠᏔᎴᏒ ᎠᎹᏱ.
 
 ᎯᎠ [[United States National Arboretum|ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎬᎾᏕᎾ ᎦᎪᏘ]] ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎠᎩᏒᎯ ᎤᏁᏉᏨ ᎭᏫᎾᏗᏢ ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ, ᎬᏗᏍᎬᎢ ᎤᏠᏱ ᎢᏗᎬᎾᏗ backcrossing ᎪᏢᏗ ᏧᏠᎯᏍᏗ ᏗᎦᏘᎸᏍᏗ ᎠᏲᎶᎬ.
-Overall, ᎾᏍᎩ ᎨᏒᎢ utugi elisv Ꮎ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏛᏅᎢᏍᏔᏃᏅ ᎾᏍᎩᎾᎢ ᎠᏥᎵᏱᏙᎲ ᎠᏂᎧᏅᏍᎬ ᎭᏫᎾᏗᏢ ᎠᏙᎯ ᎢᎾᎨ ᎾᎥᎢ 2010.
+Overall, ᎾᏍᎩ ᎨᏒᎢ ᎤᏚᎩ ᎡᎵᏒ Ꮎ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏛᏅᎢᏍᏔᏃᏅ ᎾᏍᎩᎾᎢ ᎠᏥᎵᏱᏙᎲ ᎠᏂᎧᏅᏍᎬ ᎭᏫᎾᏗᏢ ᎠᏙᎯ ᎢᎾᎨ ᎾᎥᎢ 2010.
 
-ᏔᎵ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᏩᎵᏃᎯᏯᏍᎬ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏕᏡᎬ ᎠᎴ ᎭᏫᎾᏗᏢ [[Jackson County, Tennessee|Jackson ᏍᎦᏚᎩ, ᏖᎾᏏ]]. ᏌᏊ ᎨᏒᎢ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎣᏍᏓᎯᎨ ᎠᎴ ᎤᎭ ᎠᏰᎵ ᎠᏍᏓᏅᏅ 61 cm (24 ᎭᏫᎾᏗᏢ) ᎠᎴ ᏂᎦᏛᎢ 23 ᎠᏎᎯᎯ (75 ft) ᎠᎴ ᎯᎠ ᏐᎢ ᏡᎬ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏗ ᏥᏄᏍᏗ ᎡᏆ. ᏌᏊ ᎠᏂ ᎤᎭ ᏭᏪᏙᎢ pollinated ᎬᏙᏗ ᏧᏠᎯᏍᏗ pollen ᎾᎥᎢ ᎠᏁᎳ [[The American Chestnut Foundation|ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎦᎫᏍᏓᎥ]]; ᎯᎠ ᎠᏂᏁᏉᎬ ᏫᎵ ᎤᎭ ᎾᏍᎩ ᎤᎪᏗᏗ ᏴᏩᏁᎬ ᎤᎾᎩᎾ genes ᎠᎴ ᎢᎦᏛ ᏫᎵ ᎾᏍᏋ ᎠᏲᎶᎬ ᏗᎦᏘᎸᏍᏗ. ᎾᎿ [[18 May|18 ᎠᎾᏍᎬᏘ]] [[2006]], biologist ᎬᏙᏗ ᎯᎠ Georgia ᏗᎦᎸᏫᏍᏓᏁᏗ ᏂᎬᏩᏍᏛ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎦᏙᎬ ᎯᎸᏍᎩ ᏕᏡᎬ ᎾᎥᏂᎨ [[Warm Springs, Georgia|ᎤᎦᎾᏩ ᎠᎹ ᎦᏄᎪᎬ]], [[Georgia (U.S. state)|Georgia]]. ᏌᏊ ᎯᎠ ᏕᏡᎬ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 20-30 ᏧᏕᏘᏴᏓ ᎠᎦᏴᎵ ᎠᎴ 13 ᎠᏎᎯᎯ (40 ft) ᎢᏅ ᎢᎦᏘ ᎠᎴ ᎨᏒᎢ ᎯᎠ southernmost ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏡᎬ ᎤᎾᏅᏛ ᎾᏍᏋ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᎠᏛᎯᏍᏗᏍᎬ ᎣᏍᏛ [http://www.macon.com/mld/macon/news/politics/14611668.htm]. ᏄᏓᎴ ᎡᏆ ᏡᎬ ᏥᏄᏍᏛᎩ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[Talladega National Forest|Talladega ᎬᎾᏕᎾ ᎠᏙᎯ ᎢᎾᎨ]], [[Alabama]] ᎾᎿ ᏕᎭᎷᏱ 2006.[http://www.al.com/search/index.ssf?/base/news/1150795196293730.xml?birminghamnews?nstate&coll=2]. ᎾᏍᎩ ᎨᏒᎢ 26 ᎠᏎᎯᎯ (85 ft) ᎢᏅ ᎢᎦᏘ ᎬᏙᏗ ᎠᏰᎵ ᎠᏍᏓᏅᏅ 35 centimeters (14 ᎭᏫᎾᏗᏢ).
+ᏔᎵ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᏩᎵᏃᎯᏯᏍᎬ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏕᏡᎬ ᎠᎴ ᎭᏫᎾᏗᏢ [[Jackson County, Tennessee|Jackson ᏍᎦᏚᎩ, ᏔᎾᏏ]]. ᏌᏊ ᎨᏒᎢ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎣᏍᏓᎯᎨ ᎠᎴ ᎤᎭ ᎠᏰᎵ ᎠᏍᏓᏅᏅ 61 cm (24 ᎭᏫᎾᏗᏢ) ᎠᎴ ᏂᎦᏛᎢ 23 ᎠᏎᎯᎯ (75 ft) ᎠᎴ ᎯᎠ ᏐᎢ ᏡᎬ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏗ ᏥᏄᏍᏗ ᎡᏆ. ᏌᏊ ᎠᏂ ᎤᎭ ᏭᏪᏙᎢ pollinated ᎬᏙᏗ ᏧᏠᎯᏍᏗ pollen ᎾᎥᎢ ᎠᏁᎳ [[The American Chestnut Foundation|ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᎦᎫᏍᏓᎥ]]; ᎯᎠ ᎠᏂᏁᏉᎬ ᏫᎵ ᎤᎭ ᎾᏍᎩ ᎤᎪᏗᏗ ᏴᏩᏁᎬ ᎤᎾᎩᎾ genes ᎠᎴ ᎢᎦᏛ ᏫᎵ ᎾᏍᏋ ᎠᏲᎶᎬ ᏗᎦᏘᎸᏍᏗ. ᎾᎿ [[18 May|18 ᎠᎾᏍᎬᏘ]] [[2006]], biologist ᎬᏙᏗ ᎯᎠ [[Georgia (U.S. state)|ᏣᏥᏱ]] ᏗᎦᎸᏫᏍᏓᏁᏗ ᏂᎬᏩᏍᏛ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎦᏙᎬ ᎯᎸᏍᎩ ᏕᏡᎬ ᎾᎥᏂᎨ [[Warm Springs, Georgia|ᎤᎦᎾᏩ ᎠᎹ ᎦᏄᎪᎬ]], [[Georgia (U.S. state)|ᏣᏥᏱ]]. ᏌᏊ ᎯᎠ ᏕᏡᎬ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗᏇ 20-30 ᏧᏕᏘᏴᏓ ᎠᎦᏴᎵ ᎠᎴ 13 ᎠᏎᎯᎯ (40 ft) ᎢᏅ ᎢᎦᏘ ᎠᎴ ᎨᏒᎢ ᎯᎠ southernmost ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏡᎬ ᎤᎾᏅᏛ ᎾᏍᏋ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᎠᏛᎯᏍᏗᏍᎬ ᎣᏍᏛ [http://www.macon.com/mld/macon/news/politics/14611668.htm]. ᏄᏓᎴ ᎡᏆ ᏡᎬ ᏥᏄᏍᏛᎩ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[Talladega National Forest|Talladega ᎬᎾᏕᎾ ᎠᏙᎯ ᎢᎾᎨ]], [[Alabama|ᎠᎳᏆᎹ]] ᎾᎿ ᏕᎭᎷᏱ 2006.[http://www.al.com/search/index.ssf?/base/news/1150795196293730.xml?birminghamnews?nstate&coll=2]. ᎾᏍᎩ ᎨᏒᎢ 26 ᎠᏎᎯᎯ (85 ft) ᎢᏅ ᎢᎦᏘ ᎬᏙᏗ ᎠᏰᎵ ᎠᏍᏓᏅᏅ 35 centimeters (14 ᎭᏫᎾᏗᏢ).
 ᎤᎾᏓᏟᏌᏅ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᎠᎾᏍᎬᏘ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ ᎾᏍᎩ ᎯᎠ ᏗᎦᏃᏢᎩ ᎡᏆ ᏴᏩᏁᎬ ᎤᎾᎩᎾ ᏕᏡᎬ ᎠᏠᏯᏍᏗᏍᎩ ᎡᎳᏗ ᎤᏩᎾᏕᏍᎩ ᎠᏲᎶᎬ ᏗᎦᏘᎸᏍᏗ, hypovirulence (ᎯᎠ ᏗᎦᏘᎸᏍᏗ ᎠᏲᎶᎬ ᏂᎯ ᎨᏒᎢ ᎥᏳᎩ ᎾᎥᎢ ᎥᏳᎩ), ᎠᎴ ᎣᏍᏛ ᏄᏍᏗᏓᏅ ᏄᏍᏗᏓᏅ; ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏕᎦᎸᏛ ᎧᏁᏌᎢ, ᎡᏆ ᎤᎾᎩᎾ ᏕᏡᎬ ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏒᏅ, ᎠᎴ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ ᏭᏪᏙᎢ ᏗᏄᏪᏍᏗ ᎯᎠ ᎠᏲᎶᎬ-causing ᏓᏪᎳᎩᏍᎩ. 
 
 == ᎬᏔᏂᏓᏍᏗ ==
