--- a/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
+++ b/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
@@ -374,6 +374,15 @@ Greetings, please translate this message if you can.
 
 To do this, we need your help.  We are [[m:Fundraising_2010/Messages|testing messages]] and we want to be sure that our messages will work with your language.  If it does not and your community can come up with your own banner in the spirit of supporting free knowledge, we invite you to submit your proposals and be active in this process.  Wikimedia is for you, join us in supporting free knowledge in your local community!  [[User:Kpeterzell|Keegan, WMF Fundraiser 2010]] 05:00, 15 September 2010 (UTC)
 
+==Beat Jimmy==
+Please translate this message.
+
+The Fundraising Committee is issuing all interested community members a challenge: [http://meta.wikimedia.org/wiki/Fundraising_2010 we want you to beat Jimmy]. The appeal from Jimmy Wales and the corresponding banner have been tested head-to-head with other successful banners, and the results are clear: it's our best performing message... by a lot. This year we have a lofty fundraising goal; we need all of our banners to bring in donations like the Jimmy Appeal, but no one wants to keep the Jimmy banner up for two months.  We want to run donor quotes, and other wonderful ideas, but we have to have banners that work as well as or better than the Jimmy appeal.
+
+We've just released the highlights from a [http://meta.wikimedia.org/wiki/Fundraising_2010#Focus_Group donor focus group], and the results of our [http://meta.wikimedia.org/wiki/File:FR_Donor_survey_report.pdf donor survey]. With one month to the launch of the fundraiser, the messages we test must be driven by data from our tests and surveys - we can no longer rely on instinct alone. 
+
+We've redesigned our fundraising meta pages with the Jimmy challenge; check out the survey results and propose/discuss banners that reflect these findings.  Add the banners you think will 'beat Jimmy' [http://meta.wikimedia.org/wiki/Fundraising_2010/Messages/BeatJimmy here] to be tested Tuesday October 12 against Jimmy. [[User:Kpeterzell|Keegan, WMF Fundraiser 2010]] 02:55, 8 October 2010 (UTC)
+
 [[Category:ᏫᎩᏇᏗᏯ]]
 
 [[ang:Ƿicipǣdia:Þorpes Ƿiella]]
