Japanese -> ᏣᏩᏂᏏ, as per CLDR

--- a/ᎩᏔᏯ.mw
+++ b/ᎩᏔᏯ.mw
@@ -46,21 +46,21 @@
 * ''[[Prunus eminens]]'' Beck - (Semi-ᎤᏩᏱᏢᎢ ᎩᏔᏯ)
 * ''[[Prunus fruticosa]]'' Pall. - European ᎤᏍᏗ ᎩᏔᏯ, [[Dwarf cherry|ᎤᏍᏗ ᎩᏔᏯ]], Mongolian ᎩᏔᏯ ᎠᎴ Steppe ᎩᏔᏯ
 * ''[[Prunus gondouinii]]'' (Poit. ᎠᎴ Turpin) Rehder - Duke ᎩᏔᏯ
-* ''[[Prunus grayana]]'' Maxim. - Japanese ᏥᏍᏆ ᎩᏔᏯ ᎠᎴ Gray's ᏥᏍᏆ ᎩᏔᏯ
+* ''[[Prunus grayana]]'' Maxim. - [[Japanese|ᏣᏩᏂᏏ]] ᏥᏍᏆ ᎩᏔᏯ ᎠᎴ Gray's ᏥᏍᏆ ᎩᏔᏯ
 * ''[[Prunus humilis]]'' Bunge - Chinese [[plum|ᏆᏄᎾᏍᏗᎢ]]-ᎩᏔᏯ ᎠᎴ [[Humble bush cherry|ᏄᏢᏉᏛᎾ ᎤᏩᏱᏢᎢ ᎩᏔᏯ]]
 * ''[[Prunus ilicifolia]]'' (Nutt. ex Hook. ᎠᎴ Arn.) Walp. - [[Hollyleaf cherry|ᎤᏍᏓᏍᏗ ᎤᎦᎶᎦ ᎩᏔᏯ]], Evergreen ᎩᏔᏯ, [[Holly-leaved cherry|ᎤᏍᏓᏍᏗ ᎤᎦᎶᎦ ᎩᏔᏯ]] ᎠᎴ Islay
 * ''[[Prunus incisa]]'' Thunb. - Fuji ᎩᏔᏯ
-* ''[[Prunus jamasakura]]'' Siebold ex Koidz. - Japanese ᎣᏓᎸ ᎩᏔᏯ ᎠᎴ Japanese ᎦᏚᏏ ᎩᏔᏯ
+* ''[[Prunus jamasakura]]'' Siebold ex Koidz. - [[ᏣᏩᏂᏏ ᎣᏓᎸ ᎩᏔᏯ]] ᎠᎴ [[ᏣᏩᏂᏏ ᎦᏚᏏ ᎩᏔᏯ]]
 * ''[[Prunus japonica]]'' Thunb. - Korean ᎩᏔᏯ
 * ''[[Prunus laurocerasus]]'' L. - ᎩᏔᏯ laurel 
 * ''[[Prunus lyonii]]'' (Eastw.) Sarg. - Catalina [[Island|ᎤᎿᎷᏛᎢ]] ᎩᏔᏯ
 * ''[[Prunus maackii]]'' Rupr. - Manchurian ᎩᏔᏯ ᎠᎴ Amur ᏛᏯ
 * ''[[Prunus mahaleb]]'' L. - [[Saint Lucie cherry|ᎾᏍᏕᏅᎾ ᎷᏏᎠ ᎩᏔᏯ]], [[Rock cherry|ᏅᏯ]], [[Perfumed cherry|ᎠᎵᏍᏚᏟᏍᏗ ᎩᏔᏯ]] ᎠᎴ Mahaleb ᎩᏔᏯ
 * ''[[Prunus maximowiczii]]'' Rupr. - [[Miyama cherry|ᎻᏯᎹ ᎩᏔᏯ]] ᎠᎴ Korean ᎩᏔᏯ
-* ''[[Prunus mume]]'' (Siebold & Zucc.) Ume, Japanese [[apricot|ᎶᏂᎨ ᎠᏓᏛᏍᎩ]], Chinese [[plum|ᏆᏄᎾᏍᏗᎢ]]
+* ''[[Prunus mume]]'' (Siebold ᎠᎴ Zucc.) Ume, [[Japanese|ᏣᏩᏂᏏ]] [[apricot|ᎶᏂᎨ ᎠᏓᏛᏍᎩ]], Chinese [[plum|ᏆᏄᎾᏍᏗᎢ]]
 * ''[[Prunus myrtifolia]]'' (L.) Urb. - West Indian ᎩᏔᏯ
 * ''[[Prunus nepaulensis]]'' (Ser.) Steud. - Nepal ᏥᏍᏆ ᎩᏔᏯ
-* ''[[Prunus nipponica]]'' Matsum. - Takane ᎩᏔᏯ, [[Peak cherry|ᏫᎪᏍᏓᏴ ᎩᏔᏯ]] ᎠᎴ Japanese Alpine ᎩᏔᏯ
+* ''[[Prunus nipponica]]'' Matsum. - Takane ᎩᏔᏯ, [[Peak cherry|ᏫᎪᏍᏓᏴ ᎩᏔᏯ]] ᎠᎴ ᏣᏩᏂᏏ Alpine ᎩᏔᏯ
 * ''[[Prunus occidentalis]]'' Sw. - ᏭᏕᎵᎬᏗᏜ ᎩᏔᏯ laurel
 * ''[[Prunus padus]]'' L. - [[Bird cherry|ᏥᏍᏆ ᎩᏔᏯ]] ᎠᎴ European ᏥᏍᏆ ᎩᏔᏯ
 * ''[[Prunus pensylvanica]]'' L.f. - [[Pin cherry|ᎤᏍᏆᏘ ᎩᏔᏯ]], [[Fire cherry|ᎠᏥᎸ ᎩᏔᏯ]], ᎠᎴ [[Wild red cherry|ᎩᎦᎨ ᎩᏔᏯ ᎢᎾᎨ ᎡᎯ]]
@@ -73,7 +73,7 @@
 * ''[[Prunus sargentii]]'' Rehder - Sargent's ᎩᏔᏯ ᎠᎴ [[Ezo Mountain cherry|ᎡᏦ ᎣᏓᎸ ᎩᏔᏯ]]
 * ''[[Prunus serotina]]'' Ehrh. - [[Black cherry|ᎬᏂᎨ ᎩᏔᏯ]]
 * ''[[Prunus serrula]]'' Franch. - Paperbark ᎩᏔᏯ, [[Birch bark cherry|ᏗᏯᎶᏬᏍᎩ ᎤᏯᎸ ᎩᏔᏯ]] ᎠᎴ Tibetan ᎩᏔᏯ
-* ''[[Prunus serrulata]]'' Lindl. - Japanese ᎩᏔᏯ, [[Hill cherry|ᎦᏚᏏ ᎩᏔᏯ]], [[Oriental cherry|ᎠᏓᎶᏂᎨ ᎩᏔᏯ]] ᎠᎴ [[East Asian cherry|ᏗᎧᎸᎬᎢ ᎠᏓᎶᏂᎨ ᎩᏔᏯ]]
+* ''[[Prunus serrulata]]'' Lindl. - [[ᏣᏩᏂᏏ ᎩᏔᏯ]], [[Hill cherry|ᎦᏚᏏ ᎩᏔᏯ]], [[Oriental cherry|ᎠᏓᎶᏂᎨ ᎩᏔᏯ]] ᎠᎴ [[East Asian cherry|ᏗᎧᎸᎬᎢ ᎠᏓᎶᏂᎨ ᎩᏔᏯ]]
 * ''[[Prunus speciosa]]'' (Koidz.) Ingram - Oshima ᎩᏔᏯ
 * ''[[Prunus ssiori]]'' Schmidt- Hokkaido ᏥᏎᏆ ᎩᏔᏯ
 * ''[[Prunus stipulacea]]'' Maxim.
