+info, ᎤᎾᏓᏟᏌᎲ ᎦᎲᏓ

--- a/ᏣᏩᏂᏏ.mw
+++ b/ᏣᏩᏂᏏ.mw
@@ -1,26 +1,25 @@
 {{Infobox Country
 | Long name = 日本国<br />''Nihon-koku''
-| Name = ᏣᏆᏂ
+| Name = ᏣᏩᏂ
 | ᎦᏓᏘ = Flag of Japan.svg
 | Coat of arms = Imperial Seal of Japan.svg
 | Location = Japan (orthographic projection).svg
 | size=200px
-| Area = 377873
-| Population = 127433494
+| Area = 377,873
+| Population = 12,743,3494
 | Population year = 2007
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = 
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏣᏩᏂᏏ ᎦᏬᏂᎯᏍᏗ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[ᏙᎩᏲ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏙᎩᏲ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[ᏂᎰᏅ ᎤᎬᏫᏳᎯ ᎠᎩᎯᏙ|ᎠᎩᎯᏙ]]
-| ᎠᏕᎳ = ᏱᏅ
+| ᎠᏕᎳ = ᏣᏩᏂᏏ ᎠᏕᎳ
 }}
-ᏂᎰᏂ ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎠᏏᎠ|ᎠᏏᏲᎢ]]. ᏣᏆᏂ ᎠᎵᏍᏓᏴᏗ: [[ᏑᏏ]].
+ᏂᎰᏂ ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎠᏏᎠ|ᎠᏏᏲᎢ]]. ᏣᏩᏂ ᎠᎵᏍᏓᏴᏗ: [[ᏑᏏ]]. [[ᏣᏩᏂᏏ ᎦᏬᏂᎯᏍᏗ]] ᎠᏬᏂᎭ. ᎤᎾᏤᎵ ᎠᏕᎳ [[ᏣᏩᏂᏏ ᎠᏕᎳ]] (¥).
 
 
 {{Stub}}
 
 [[Category:ᏓᎶᏂᎦᏍᏛ]]
-[[Category:Questionably transliterated titles]]
 
 [[ab:Иапониа]]
 [[ace:Jeupun]]
