ᏩᎶᏏ ᎡᏍᎦᏂ!! (bold attempt at a "frog distribution" translation ^o^

--- a/ᏩᎶᏏ.mw
+++ b/ᏩᎶᏏ.mw
@@ -12,7 +12,7 @@
 | ordo_authority = [[Blasius Merrem|Merrem]], 1820
 | range_map = Frog distribution.png
 | range_map_width = 240px
-| range_map_caption = Distribution of frogs (in black)
+| range_map_caption = ᏩᎶᏏ ᎡᏍᎦᏂ (ᎬᎿᎨ)
 | subdivision_ranks = Suborders
 | subdivision = [[Archaeobatrachia]]<br />
 [[Mesobatrachia]]<br />
