ᎦᏬᏂᎯᏍᏗ links etc

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -22,16 +22,16 @@
 * [[Denmark]]
 * [[Finland]]
 * [[France]]
-* [[Germany]]
+* [[Germany]], [[ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ]] <!-- German language -->
 * [[Italy]]
 * [[Estonia]]
 * [[Latvia]]
 * [[Lithuania]]
 * [[Norway]]
-* [[Sweden]]
+* [[Sweden]], [[ᎤᎦᎾᏍᏔ ᎦᏬᏂᎯᏍᏗ]] <!-- Swedish Language -->
 * [[Poland]]
 * [[Portugal]]
-* [[Spain]]
+* [[ᏍᏆᏂ]] <!-- spain -->
 * [[Switzerland]]
 * [[Turkey]]
 * [[United Kingdom|ᎦᎵᏍᏏᎯ]]
