--- a/ᎠᏂᏙᎢᏥ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᎠᏂᏙᎢᏥ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -1,5 +1,22 @@
 [[File:Map German World.png|300px|thumb|ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ [[ᎡᎶᎯ]]-Ꭿ]]
 '''ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ''' ᎠᎴᏅᏙᏗ [[ᏍᏆᏂ]], [[ᏳᎳᏛ]]-Ꭿ. 200,000,000 ᎠᏂᏴᏫ ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ ᎠᏬᏂᎭ. 
+{| class="wikitable" style="border=1px solid grey;"
+! ᏣᎳᎩ !! ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ
+|-
+| ᎣᏏᏲ
+| hej
+|-
+| ᏩᏙ
+| tack
+|-
+| ᎠᏍᎦᏴ
+| herrar
+|-
+| ᎠᎨᏴ
+| damer
+|-
+|}
+
 {{stub}}
 
 [[Category:ᏳᎳᏛ]]
