oops put sweedish on there

--- a/ᎠᏂᏙᎢᏥ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᎠᏂᏙᎢᏥ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -4,16 +4,16 @@
 ! ᏣᎳᎩ !! ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ
 |-
 | ᎣᏏᏲ
-| hej
+| Hallo
 |-
 | ᏩᏙ
-| tack
+| Danke
 |-
 | ᎠᏍᎦᏴ
-| herrar
+| Männer
 |-
 | ᎠᎨᏴ
-| damer
+| Frauen
 |-
 |}
 
