--- a/ᎠᏕᎸ_ᏓᎶᏂᎨ.mw
+++ b/ᎠᏕᎸ_ᏓᎶᏂᎨ.mw
@@ -5,7 +5,7 @@
 == ᎢᎦᏪᏛ ᎨᎦᏓᏅᏖᏗ ==
 ᎠᏕᎸ ᏓᎶᏂᎨ ᎨᏒᎢ metallic ᏑᏓᎴᎩ ᎬᏙᏗ ᎨᎦᏓᏅᏖᏗ [[yellow|ᏓᎶᏂᎨ]] ᏗᎧᏃᏗ, ᎠᎴ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ [[black|ᎬᎿᎨ]] ᎠᎴ [[ruby|ᎩᎦᎨ]] ᎯᎳᎪ ᎢᏳ ᎣᏌᏂ uniyatolv, ᎾᎯᏳᎢ [[colloid]]ᎦᎾᏄᎪᏫᏒ ᎪᎷᏩᏛᏓ ᎠᎴ ᏂᎬᎢ ᎠᏑᏫᏒ ᎠᎴ ᎢᏳᏓᎵᎭ [[purple|ᎩᎨᏍᏗ]]. ᎾᏍᎩ ᎯᎠ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎠᎴ ᎯᎠ ᏄᎵᏍᏔᏅ ᎠᏕᎸ ᏓᎶᏂᎨ ᎤᏤᎵ [[plasmon frequency|plasmon ᎠᏍᏓᏩᏛᏍᏙᏗ]] ᎠᏝᎥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎬᎪᏩᏛᏗ ᎠᏍᏓᏅᏅ, ᎦᏙ ᎤᏍᏗ ᏂᏕᎬᏂᏏᏍᎬ ᎩᎦᎨ ᎠᎴ ᏓᎶᏂᎨ ᎠᏨᏍᏛ ᎾᏍᏋ reflected, ᎠᎴ ᏌᎪᏂᎨ ᎠᏨᏍᏛ ᎾᏍᏋ ᎠᎦᏎᏍᏙᏗ. ᎾᏍᎩ ᎤᏩᏒ ᎠᏕᎸ ᎤᏁᎬ colloids ᎬᏂᎨᏒ ᏂᎬᏅ ᎯᎠ ᎤᏠᏱ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎬᏙᏗ ᎠᏨᏍᏛ, ᎥᏓᏓᎫᏴᎡᏗᏱ ᎾᎾᎢ ᏍᏆᎵᎯᎨᏍᏗ ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎠᏃᏢᏍᎬ ᎠᏕᎸ ᎤᏁᎬ colloids ᏓᎶᏂᎨ ᎭᏫᎾᏗᏢ ᏗᎧᏃᏗ.
 
-ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎤᎪᏗᏗ [[malleable|ᎦᏓᏆᎵ]] ᎠᎴ [[ductility|ᎦᏓᏆᎵ]] [[metal|ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ]] ᎤᎾᏅᏛ; ᏏᏴᏫ [[gram|ᏄᏓᎨᏒ]] ᏰᎵᏇ ᎾᏍᏋ ᎠᏥᏠᏒ ᎾᎾᎯ ᏗᎬᎯᏓ ᏌᏊ [[square meter|ᏅᎩ ᏧᏅᏏᏯ ᎠᏎᎯᎯ]], ᎠᎴ [[ounce|ᏄᏓᎨᏒ]] ᎾᎾᎯ 300 [[square foot|ᏅᎩ ᏧᏅᏏᏯ ᏧᎾᎳᏏᏕᎾ]]. ᎠᏕᎸ ᏓᎶᏂᎨ ᎢᏳᏊ ᏱᏂᎦᎳᏍᏗ ᏚᏙᏢᏒ ᏧᏠᎯᏍᏗ ᎬᏙᏗ ᎤᎪᏗᏗ ᏐᎢ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ. ᎾᏍᎩ ᎯᎠ ᏧᏠᎯᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᏛᎯᏍᏔᏅ ᎧᏁᏉᎩ ᎯᎠ ᎤᏓᏅᏖᏗ ᎠᎴ ᎪᏢᏗ ᎬᏙᏗ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ. ᎦᏟᏐᏗ [[copper|ᎠᏥᏱ]] ᏚᏓᏲᏒᎩ redder ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ, [[iron|ᏔᎷᎩᏍᎩ]] ᏌᎪᏂᎨ, [[aluminium]] ᎩᎨᏍᏗ, [[platinum]] ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᎤᏁᎬ, ᎠᎴ ᏂᎬᏩᏍᏛ [[bismuth]] ᎢᏧᎳ ᎬᏙᏗ ᎠᏕᎸ ᎤᏁᎬ ᏧᏠᎯᏍᏗ ᎠᏛᎯᏍᏙᏗ ᎬᎿᎨ. ᎾᏰᎯᏯ ᎠᏕᎸ ᏓᎶᏂᎨ ᎢᎦᎢ ᎨᏐ ᎤᏠᏱᎭ ᏧᏁᎳ ᏍᎪᎯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏯᏓᏅᏖᏗ [[silver|ᎠᏕᎸ ᎤᏁᎬ]], ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ — ᏧᏠᎯᏍᏗ ᎬᏙᏗ ᎠᏕᎸ ᎤᏁᎬ ᎣᏍᏛ ᎤᏓᏅᏘ ᎦᏬᎯᎸᏙᏗ 20% ᎠᎴ ᎤᏯᏅᎲ [[electrum]]. ᏥᏄᏍᏗ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᏕᎸ ᎤᏁᎬ ᎧᏁᏉᎠ, ᎯᎠ ᏗᎧᏃᏗ ᏗᏙᎳᎩ whiter ᎠᎴ ᎯᎠ [[Relative density|ᏗᎪᏍᎩ ᎤᎳᏂᎬᎬ]] ᏗᏙᎳᎩ ᎡᎳᏗᎨ.
+ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎤᎪᏗᏗ [[malleable|ᎦᏓᏆᎵ]] ᎠᎴ [[ductility|ᎦᏓᏆᎵ]] [[metal|ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ]] ᎤᎾᏅᏛ; ᏏᏴᏫ [[gram|ᏄᏓᎨᏒ]] ᏰᎵᏇ ᎾᏍᏋ ᎠᏥᏠᏒ ᎾᎾᎯ ᏗᎬᎯᏓ ᏌᏊ [[square meter|ᏅᎩ ᏧᏅᏏᏯ ᎠᏎᎯᎯ]], ᎠᎴ [[ounce|ᏄᏓᎨᏒ]] ᎾᎾᎯ 300 [[square foot|ᏅᎩ ᏧᏅᏏᏯ ᏧᎾᎳᏏᏕᎾ]]. ᎠᏕᎸ ᏓᎶᏂᎨ ᎢᏳᏊ ᏱᏂᎦᎳᏍᏗ ᏚᏙᏢᏒ ᏧᏠᎯᏍᏗ ᎬᏙᏗ ᎤᎪᏗᏗ ᏐᎢ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ. ᎾᏍᎩ ᎯᎠ ᏧᏠᎯᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᏛᎯᏍᏔᏅ ᎧᏁᏉᎩ ᎯᎠ ᎤᏓᏅᏖᏗ ᎠᎴ ᎪᏢᏗ ᎬᏙᏗ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ. ᎦᏟᏐᏗ [[copper|ᎠᏥᏱ]] ᏚᏓᏲᏒᎩ redder ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ, [[iron|ᏔᎷᎩᏍᎩ]] ᏌᎪᏂᎨ, [[aluminium]] ᎩᎨᏍᏗ, [[platinum]] ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᎤᏁᎬ, ᎠᎴ ᏂᎬᏩᏍᏛ [[bismuth]] ᎢᏧᎳ ᎬᏙᏗ ᎠᏕᎸ ᎤᏁᎬ ᏧᏠᎯᏍᏗ ᎠᏛᎯᏍᏙᏗ ᎬᎿᎨ. ᎾᏰᎯᏯ ᎠᏕᎸ ᏓᎶᏂᎨ ᎢᎦᎢ ᎨᏐ ᎤᏠᏱᎭ ᏧᏁᎳ ᏍᎪᎯ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎢᏯᏓᏅᏖᏗ <!-- silver --> [[ᎠᏕᎸ ᎤᏁᎬ]], ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ — ᏧᏠᎯᏍᏗ ᎬᏙᏗ ᎠᏕᎸ ᎤᏁᎬ ᎣᏍᏛ ᎤᏓᏅᏘ ᎦᏬᎯᎸᏙᏗ 20% ᎠᎴ ᎤᏯᏅᎲ [[electrum]]. ᏥᏄᏍᏗ ᎯᎠ ᎢᎦᎢ ᎨᏒ ᎠᏕᎸ ᎤᏁᎬ ᎧᏁᏉᎠ, ᎯᎠ ᏗᎧᏃᏗ ᏗᏙᎳᎩ whiter ᎠᎴ ᎯᎠ [[Relative density|ᏗᎪᏍᎩ ᎤᎳᏂᎬᎬ]] ᏗᏙᎳᎩ ᎡᎳᏗᎨ.
 
 ᎠᏕᎸ ᏓᎶᏂᎨ ᎨᏒᎢ ᎣᏍᏛ ᏗᎦᏣᏄᎶ ᎤᎾᏣ [[heat|ᎤᎦᎾᏭ]] ᎠᎴ [[electricity|ᎢᏳᏊ]], ᎠᎴ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᎸᏉᏔᏅ ᎾᎥᎢ [[Earth's atmosphere|ᎤᏃᎴ]] ᎠᎴ ᎤᎪᏗᏗ [[reagent|ᎠᎦᏛᏗ ᏄᏍᏛ]]. ᎤᎦᎾᏭ, ᎤᎯᏌᏛ, [[oxygen|ᎥᎴᏂᏙᎲ]], ᎠᎴ ᎤᎪᏗᏗ [[corrosion|ᏄᎵᏂᎬᎬ]] ᏗᏂᎳᏫᎩ ᎤᎭ ᎤᏙᎯᏳ ᎤᏍᏗ chemical ᎢᏳᎵᏍᏙᏗ ᎾᎿ ᎠᏕᎸ ᏓᎶᏂᎨ, ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᎠᏔᎴᏒ ᎠᎹᏱ-ᏧᎾᏙᎳᏨ ᎾᏍᎩᎾᎢ ᎬᏙᏗ ᎭᏫᎾᏗᏢ [[coin|ᎠᏛᎯᏍᏙᏗ]]ᎠᎴ [[jewelry|ᎠᏣᏅᏙ]]; ᏧᏓᎴᎾᎢ, [[halogen]]ᏫᎵ chemically ᎠᏓᏁᏟᏴᏍᎩ ᎠᏕᎸ ᏓᎶᏂᎨ, ᎠᎴ [[aqua regia|ᎠᎹ regia]] ᎠᎧᎵᏏᏐᏗ ᎾᏍᎩ.
 
