ᏥᎾ,  ᏣᏩᏂ, ᏙᎩᏲ, ᎤᎦᎾᏭ ᎢᏗᎵ ᎪᎴᎠ

--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -1,8 +1,15 @@
 [[File:Asia_(orthographic_projection).svg|right|120px|ᏓᎶᏂᎦᏍᏛ]]
 ᏓᎶᏂᎦᏍᏛ [[ᎡᏆ ᎦᏙᎯ]], ᎾᎥᏂᎨᏍᏙᏗ [[ᏳᎳᏛ]].
 
+*[[ᏥᎾ]]
+
+*[[ᏣᏩᏂ]]
+**[[ᏙᎩᏲ]]
+
+*[[ᎤᎦᎾᏭ ᎢᏗᎵ ᎪᎴᎠ]]
+
 ==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
-{{Commonscat|Asia}}
+{{Commons|Asia|ᏓᎶᏂᎦᏍᏛ}}
 
 [[Category:ᏓᎶᏂᎦᏍᏛ| ]]
 {{stub}}
