there is a page for german on here already, ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ, fixing link

--- a/Indo-European_languages.mw
+++ b/Indo-European_languages.mw
@@ -1,4 +1,4 @@
-ᎮᎳ ᏂᎦᏓ ᏧᏂᏬᏂᎯᏍᏗ ᎠᏂᏳᏁᎦ ᏧᏂᏬᏂᏍᎪᎢ - [[English|ᎩᎵᏏ]], [[Spanish|ᏍᏆᏂ]], [[German|ᎠᏂᏓᏥ]],[[French|ᎦᎸᏥ]], [[Italian|ᎬᏩᎵᏲᏥᎢ]], [[Portuguese|ᏉᏧᎦᎵ]], ᎠᎴ [[Russian|ᏲᏂᎢ]] ᏂᎦᏓ ᏐᏉ ᎢᏳᏩᎧᏔ ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏥᎨᏒ.<!-- language names from Cherokee/Tsalagi Common Locale Data Repository (CLDR) -->
+ᎮᎳ ᏂᎦᏓ ᏧᏂᏬᏂᎯᏍᏗ ᎠᏂᏳᏁᎦ ᏧᏂᏬᏂᏍᎪᎢ - [[English|ᎩᎵᏏ]], [[Spanish|ᏍᏆᏂ]], [[ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ|ᎠᏂᏓᏥ]],[[French|ᎦᎸᏥ]], [[Italian|ᎬᏩᎵᏲᏥᎢ]], [[Portuguese|ᏉᏧᎦᎵ]], ᎠᎴ [[Russian|ᏲᏂᎢ]] ᏂᎦᏓ ᏐᏉ ᎢᏳᏩᎧᏔ ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏥᎨᏒ.<!-- language names from Cherokee/Tsalagi Common Locale Data Repository (CLDR) -->
 
 ᎯᎳᎢᏳ, ᎤᏓᏍᏈᏍᏓ ᎠᏂᏴᏫ ᎢᎾᏗᏯ ᎠᏁᎮᎢ. ᎯᎠ ᎠᏂᏴᏫ ᏄᏓᎴ ᏅᏃ ᏧᎾᏚᎵᏍᎨᎢ. ᏃᏉ ᎤᏓᏍᏈᏍᏓ ᏄᏓᎴ ᎠᏰᎵ ᎠᏁᎰᎢ, ᎠᏎᏍᎩᏂ, ᏃᏉᏃ ᏍᏈᏍᏓ ᏄᏓᎴ ᎦᏬᏂᎯᏍᏗ ᏧᏂᏬᏂᎰᎢ. ᏂᎪᎯᎸᎢ ᏱᏂᎦᎵᏍᏘᎰᎢ, ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏧᏂᏬᏂᎰᎢ ᏍᏈᏍᏓ ᎠᏂᏴᏫ, ᎦᏬᏂᎯᏍᏗ ᎪᎱᏍᏗ ᏄᏓᎴ ᏂᎦᎵᏍᏘᎰᎢ. ᎯᎠᏍᏊ: ᎠᏂᎶᎻ ᎳᏘᏂ ᏧᏂᏬᏂᎮᎢ, ᎠᏎᏃ ᏃᏉ ᎠᏂᏍᏆᏂ ᏤᏍᏗ ᎳᏘᏂ ᏳᏂᏬᏂᎰᎢ. ᎠᏍᏆᏂ ᏧᏂᏬᏂᎰᎢ. ᎯᎠᏍᏊ, ᎳᏘᏂ ᏃᎴ [[Greek|ᎠᎪᎢ]], ᏃᎴ ᎠᏂᎨᎵᏘᎦ ᏧᏂᏬᏂᎯᏍᏗ ᏐᏉᏏᏓᏁᎳ. ᎯᎠᏃ ᎦᏓᎧ - ᎯᎳᎢᏳ, ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏥᎨᏒᎢ.
 
