butterfly link to ᎧᎹᎹ

--- a/ᏍᏈᏍᏗ_ᏗᎾᎳᏍᎬᏍᎩ.mw
+++ b/ᏍᏈᏍᏗ_ᏗᎾᎳᏍᎬᏍᎩ.mw
@@ -1,6 +1,6 @@
 [[Image:Caterpillar at 5th stage.jpg|thumb|ᎯᎠ ᎬᏂᎲᎢ ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ  ᎯᎠ [[Opodiphthera eucalypti|ᏄᎬᏫᏳᏌᏕᎩ ᏕᎬᏔᏛ ᏩᏐᎳ]]]]
 
-'''ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ''' ᎨᏒᎢ ᎯᎠ [[larva|ᎠᏲᎵ]]l ᎤᏙᏢᏒ [[Lepidoptera|lepidopteran]] (ᎨᎳ ᎯᎠ ᏨᏍᎪᏱ ᎠᏓᏅᏍᏗ comprising [[butterfly|butterflies]] ᎠᎴ [[moth|ᏩᏐᎳ]]).
+'''ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ''' ᎨᏒᎢ ᎯᎠ [[larva|ᎠᏲᎵ]]l ᎤᏙᏢᏒ [[Lepidoptera|lepidopteran]] (ᎨᎳ ᎯᎠ ᏨᏍᎪᏱ ᎠᏓᏅᏍᏗ comprising [[ᎧᎹᎹ|ᎧᎹᎹ]] ᎠᎴ [[moth|ᏩᏐᎳ]]).
 
 ==ᎤᏍᏗ==
 
