/* Ꮣ */ correction - my mistake!

--- a/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
+++ b/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
@@ -85,7 +85,7 @@
 *[[Dominican Republic]]
 
 ==Ꮣ==
-*[[China|ᏓᎶᏂᎨᏍᏛ (ᎠᏰᎵ ᎤᏙᏢᏒᎢ)]]<ref name=CLDR/>
+*[[China|ᏓᎶᏂᎨᏍᏛ]]<ref name=CLDR/>
 
 ==F==
 *[[Fiji]]
