--- a/ᎢᏓᎵᏱ.mw
+++ b/ᎢᏓᎵᏱ.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
 | Long name = Italia
-| Name = ᎢᎳᎵ
+| Name = ᏲᎶ
 | ᎦᏓᏘ = Flag of Italy.svg
 | Coat of arms = Italy-Emblem.svg
 | Location = EU-Italy.svg
@@ -14,7 +14,7 @@
 | ᎠᏕᎳ = ᎡᎶ
 }}
 
-'''ᎢᎳᎵ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏛ]].
+'''ᏲᎶ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏛ]].
 
 ==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
 {{Commonscat|Italy}}
