--- a/ᎡᏆ_ᎦᏙᎯ.mw
+++ b/ᎡᏆ_ᎦᏙᎯ.mw
@@ -9,6 +9,9 @@
 # [[ᏧᏴᏢ ᎠᎹᏰᎵ]]
 # [[ᏳᎳᏛ]]<ref>Handouts from the [http://www.cherokee.org/Culture/LanguageList/Default.aspx ᏣᎳᎩᎯ ᎠᏰᎵ Cultural Resource Center: Language Services]. 2009</ref>
 
+==ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ==
+*[[ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ]]
+
 == ᏫᏓᏎᏄᎢ ==
 <references/>
 
