--- a/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
+++ b/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
@@ -1,4 +1,5 @@
 ᎯᎠ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ.
+{{CompactTOC8}}
 
 ==Ꭰ==
 *[[United States|ᎠᎹᏰᏟ]]<ref name=CLDR>Common Locale Data Repository for Cherokee / Tsalagi. 2010.</ref>
