*Empty MediaWiki Message*

--- a/ᏧᏴᏢ_ᎠᎹᏰᏟ.mw
+++ b/ᏧᏴᏢ_ᎠᎹᏰᏟ.mw
@@ -1,14 +1,4 @@
-{{Infobox Continent
-|image               = [[File:Location North America.svg|200px]]
-|area                = 24,709,000 km<sup>2</sup> (9,540,000 sq mi)
-|population          = 528,720,588 (2008)
-|countries           = 23
-|list_countries      = List of North American countries
-|dependencies        = ''see [[List of North American countries]]''
-|languages           = [[English language|ᎩᎵᏏ]], [[Spanish language|ᏍᏆᏂ]], [[French language|ᎦᎸᏥ]], [[Dutch language|ᏍᏆᏂ]] ᎠᎴ ᎠᏂᏐᎢ
-|time                = [[UTC-10]] to [[UTC±0|UTC]]
-}}
-
+{{File:LocationWHNorthernAmerica.png|ᏧᏴᏢ ᎠᎹᏰᎵ]]
 ᏧᏴᏢ ᎠᎹᏰᎵ [[ᎡᏆ ᎦᏙᎯ]]. ᎯᎠ ᏔᎵ [[Americas|ᎠᎺᎵᎦᎢ]]: ᏧᏴᏢ ᎠᎺᎵᎦ ᎠᎴ [[ᏧᎦᎾᏮ ᎠᎹᏰᎵ]]. [[Mexico City|ᎠᏂᏍᏆᏂᎢ ᎦᏚᎲᎢ]] ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ ᏧᏴᏢ ᎠᎹᏰᎵ-Ꭿ.
 
 ==ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ==
@@ -39,12 +29,12 @@
 | align="right" | 109,610,000
 | [[Mexico City|ᎠᏂᏍᏆᏂᎢ ᎦᏚᎲᎢ]]
 |-
-| Saint Pierre and Miquelon (ᎦᎸᏥᏱ)
+| Saint Pierre ᎠᎴ Miquelon (ᎦᎸᏥᏱ)
 | align="right" | 242
 | align="right" | 6,000
-| [[Saint-Pierre, Saint Pierre and Miquelon|Saint-Pierre]]
+| [[Saint-Pierre, Saint Pierre ᎠᎴ Miquelon|Saint-Pierre]]
 |-
-| [[United States|ᎠᎹᏰᏟ]] <ref>Includes the [[U.S. state]] of [[Hawaii]], which is distant from the North American landmass in the [[Pacific Ocean]] and therefore more commonly associated with the other territories of [[Oceania]].</ref>
+| [[United States|ᎠᎹᏰᏟ]] <ref>ᎠᏠᏯᏍᏗᏍᎩ [[Hawaii|ᎭᏩᏱ]]</ref>
 | align="right" | 9,629,091
 | align="right" | 314,659,000
 | [[Washington, D.C.]]
@@ -59,7 +49,7 @@
 | [[Antigua ᎠᎴ Barbuda]] <!--ᎠᏂᏘᏚᏩ -->
 | align="right" | 442
 | align="right" | 88,000
-| [[St. John's, Antigua and Barbuda|St. John's]]
+| [[St. John's, Antigua ᎠᎴ Barbuda|St. John's]]
 |-
 | [[Aruba]] ([[Netherlands|Neth]].)
 | align="right" | 180
@@ -181,7 +171,7 @@
 | align="right" | 29,820<ref name="popcia"/>
 | [[Marigot, St. Martin|Marigot]]
 |-
-| {[[ᎾᏍᎦᏅᎾ Vincent ᎠᎴ Ꮎ Grenadines]]
+| [[ᎾᏍᎦᏅᎾ Vincent ᎠᎴ Ꮎ Grenadines]]
 | align="right" | 389
 | align="right" | 109,000
 | [[Kingstown]]
@@ -196,7 +186,7 @@
 | align="right" | 40,009<ref name="nethant"/>
 | [[Philipsburg, Sint Maarten|Philipsburg]]
 |-
-| {[[Trinidad ᎠᎴ Tobago]]<ref name="two">Depending on definitions, Aruba, Bonaire, Curaçao, Panama, and Trinidad and Tobago have territory in [[List of countries spanning more than one continent|either or both of]] North and South America.</ref>
+| [[Trinidad ᎠᎴ Tobago]]<ref name="two">Depending on definitions, Aruba, Bonaire, Curaçao, Panama, and Trinidad and Tobago have territory in [[List of countries spanning more than one continent|either or both of]] North and South America.</ref>
 | align="right" | 5,130
 | align="right" | 1,339,000
 | [[Port of Spain]]
