--- a/ᏧᏴᏢ_ᎠᎹᏰᏟ.mw
+++ b/ᏧᏴᏢ_ᎠᎹᏰᏟ.mw
@@ -1,4 +1,4 @@
-[[File:LocationWHNorthernAmerica.png|ᏧᏴᏢ ᎠᎹᏰᎵ]]
+[[File:LocationWHNorthernAmerica.png|thumb|ᏧᏴᏢ ᎠᎹᏰᎵ]]
 ᏧᏴᏢ ᎠᎹᏰᎵ [[ᎡᏆ ᎦᏙᎯ]]. ᎯᎠ ᏔᎵ [[Americas|ᎠᎺᎵᎦᎢ]]: ᏧᏴᏢ ᎠᎺᎵᎦ ᎠᎴ [[ᏧᎦᎾᏮ ᎠᎹᏰᎵ]]. [[Mexico City|ᎠᏂᏍᏆᏂᎢ ᎦᏚᎲᎢ]] ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ ᏧᏴᏢ ᎠᎹᏰᎵ-Ꭿ.
 
 ==ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ==
