--- a/ᎨᎾᏓ.mw
+++ b/ᎨᎾᏓ.mw
@@ -1,8 +1,44 @@
-[[File:Flag of Canada.svg|thumb|250px|ᎨᎾᏓ ᎦᏓᏗ]]
+{{Infobox Country
+| Long name = 
+| Name = ᎨᎾᏓ
+| ᎦᏓᏘ = Flag of Canada.svg
+| Coat of arms = Coat of Arms of Canada (1923).jpg
+| Location = Canada (orthographic projection).svg
+| size = 170px
+| Area = 9,984,670 km<sup>2</sup>
+| Population = 	33,625,989
+| Population year = 2010
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎡᎵᏏ ᎦᏬᏂᎯᏍᏗ]] ᎠᎴ [[ᎦᎸᏥ ᎦᏬᏂᎯᏍᏗ]]
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Ottawa, Canada|ᎠᏔᏩ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = [[Toronto]]
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = 
+| ᎠᏕᎳ = ᎧᎾᏓ ᎠᏕᎳ
+}}
 
-'''ᎧᎾᏓ''' ([[ᎠᎦᎸᏥ]] ᎦᏬᏂᎯᏍᏗ, ''Canada'') — ᎤᏴᏢᎢ-ᎠᎺᎵᎦ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ-ᎢᏴ ᎠᎳᏍᎦᎶᏗ ᎨᏒ, ᎤᎭ ᎬᏩᏚᏫᏛ 107,000,000 ᎠᏂᎤᏁᎦ. ᏄᎬᏫᏳᏌᏕᎩ, ᏧᏂᎸᏫᏍᏓᏁᏗ ᎨᎦᏓᏅᏖᎮᎯ ᎨᏒᎢ.
+'''ᎨᎾᏓ''' ([[ᎠᎦᎸᏥ]] ᎦᏬᏂᎯᏍᏗ, ''Canada'') ᏙᏱᏗᏢ ᎦᏚᎲ ᏧᏴᏢ ᎠᎹᏰᎵ-Ꭿ. ᏂᎬᎢ 9,984,670 km<sup>2</sup>. ᎾᏂᎥ ᏴᏫ 33,625,989.<ref>[http://www.statcan.gc.ca/pub/82-003-x/pop/pop-h-clock-eng.htm "ᎨᎾᏓ ᎾᏂᎥ ᏴᏫ ᏩᏥ."] ''Statistics ᎨᎾᏓ.'' (20 ᏚᏂᏅᏗ 2010)</ref> ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ ᎦᏚᎲᎢ [[Ottawa|ᎠᏔᏩ]]. ᏄᎬᏫᏳᏌᏕᎩ, ᏧᏂᎸᏫᏍᏓᏁᏗ ᎨᎦᏓᏅᏖᎮᎯ ᎨᏒᎢ. [[Toronto]] ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ ᏧᏴᏢ ᎠᎹᏰᎵ-Ꭿ.
 
-{{stub}}
+==ᎧᏃᎮᎭ ᎠᎴ ᎿᎾ ᎨᏒ==
+ᎯᎠ ᏌᏇ ᎧᏃᎮᎭ ᎠᎴ ᏦᎢ ᎿᎾ ᎨᏒ ᎨᎾᏓ-Ꭿ.
+
+===ᎧᏃᎮᎭ===
+#[[Ontario]]
+#[[Quebec]]
+#[[Nova Scotia]]
+#[[New Brunswick]]
+#[[Manitoba]]
+#[[British Columbia]]
+#[[Prince Edward Island]]
+#[[Saskatchewan]]
+#[[Alberta]]
+#[[Newfoundland and Labrador]]
+
+===ᎿᎾ ᎨᏒ===
+#[[Northwest Territories]]
+#[[Yukon|ᏳᎦᏂ]]
+#[[Nunavut]]
+
+==ᏓᏓᏚᎬ ᎪᏪᎵ==
+<references/>
 
 [[Category:ᏧᏴᏢ ᎠᎹᏰᎵ]]
 
