--- a/ᎠᏔᏩ,_ᎨᎾᏓ.mw
+++ b/ᎠᏔᏩ,_ᎨᎾᏓ.mw
@@ -1,3 +1,116 @@
-ᎠᏔᏩ ᏗᎦᎳᏫᎢᏍᏗ ᎦᏚᎲᎢ [[ᎨᎾᏓ]].
+[[File:Flag of Ottawa, Ontario.svg|thumb|ᎠᏔᏩ ᎦᏓᏘ]]
+ᎠᏔᏩ ᏗᎦᎳᏫᎢᏍᏗ ᎦᏚᎲᎢ [[ᎨᎾᏓ]] ᎠᎴ [[Ontario]]. ᏔᎵᏁ ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ ᎨᎾᏓ-Ꭿ. 
+
+[[File:Canada Ottawa 2009-05-18.jpg|thumb|left|600px]]
 
 [[Category:ᎨᎾᏓ]]
+
+[[ace:Ottawa]]
+[[af:Ottawa]]
+[[als:Ottawa]]
+[[am:ኦታዋ]]
+[[ang:Ottawa]]
+[[ar:أوتوا]]
+[[an:Ottawa]]
+[[roa-rup:Ottawa]]
+[[frp:Ottawa]]
+[[bn:অটোয়া]]
+[[zh-min-nan:Ottawa]]
+[[be:Горад Атава]]
+[[be-x-old:Атава]]
+[[bo:ཨོ་ཏ་ཝ།]]
+[[bs:Ottawa]]
+[[bg:Отава]]
+[[ca:Ottawa]]
+[[cv:Оттава]]
+[[cs:Ottawa]]
+[[co:Ottawa]]
+[[cy:Ottawa]]
+[[da:Ottawa]]
+[[pdc:Ottawa]]
+[[de:Ottawa]]
+[[et:Ottawa]]
+[[el:Οττάβα]]
+[[es:Ottawa]]
+[[eo:Otavo (Ontario)]]
+[[ext:Ottawa]]
+[[eu:Ottawa]]
+[[fa:اتاوا]]
+[[hif:Ottawa]]
+[[fo:Ottawa]]
+[[fr:Ottawa]]
+[[fy:Ottawa]]
+[[ga:Ottawa]]
+[[gd:Ottawa]]
+[[gl:Otava - Ottawa]]
+[[ko:오타와]]
+[[hy:Օտավա]]
+[[hr:Ottawa]]
+[[io:Ottawa]]
+[[id:Ottawa]]
+[[ie:Ottawa]]
+[[iu:ᐊᑐᕚ/atavaa]]
+[[os:Оттавæ]]
+[[is:Ottawa]]
+[[it:Ottawa]]
+[[he:אוטווה]]
+[[kl:Ottawa]]
+[[ka:ოტავა]]
+[[kw:Ottawa]]
+[[sw:Ottawa]]
+[[ht:Otawa]]
+[[ku:Ottawa]]
+[[la:Ottava]]
+[[lv:Otava]]
+[[lt:Otava]]
+[[ln:Ottawa]]
+[[lmo:Ottawa]]
+[[hu:Ottawa]]
+[[mk:Отава]]
+[[ml:ഓട്ടവ]]
+[[mr:ओटावा]]
+[[mzn:اوتآوآ]]
+[[mn:Оттава]]
+[[nah:Ottahua]]
+[[nl:Ottawa (stad)]]
+[[ja:オタワ]]
+[[no:Ottawa]]
+[[nn:Ottawa]]
+[[nov:Ottawa]]
+[[oc:Ottawa]]
+[[pa:ਓਟਾਵਾ]]
+[[pnb:اٹاوہ]]
+[[pap:Ottawa]]
+[[pms:Ottawa]]
+[[nds:Ottawa]]
+[[pl:Ottawa]]
+[[pt:Ottawa]]
+[[ro:Ottawa]]
+[[rm:Ottawa]]
+[[qu:Ottawa]]
+[[ru:Оттава]]
+[[sah:Оттава]]
+[[sc:Ottawa]]
+[[sq:Ottawa]]
+[[simple:Ottawa, Ontario]]
+[[sk:Ottawa]]
+[[sl:Ottawa]]
+[[sr:Отава]]
+[[sh:Ottawa]]
+[[fi:Ottawa]]
+[[sv:Ottawa]]
+[[tl:Ottawa]]
+[[ta:ஒட்டாவா]]
+[[th:ออตตาวา]]
+[[tpi:Ottawa]]
+[[tr:Ottawa, Ontario]]
+[[uk:Оттава]]
+[[ur:اوٹاوا]]
+[[ug:Ottawa]]
+[[vi:Ottawa]]
+[[vo:Ottawa]]
+[[war:Ottawa]]
+[[yi:אטאווא]]
+[[yo:Ottawa]]
+[[zh-yue:渥太華]]
+[[zh:渥太華]]
