--- a/ᏗᎦᎳᏫᏍᏗ_ᏥᏌᏯ.mw
+++ b/ᏗᎦᎳᏫᏍᏗ_ᏥᏌᏯ.mw
@@ -1,6 +1,5 @@
-ᎯᎠ "ᎤᏙᎯᏳ ᏥᏌ ᏗᎦᎳᏫᏍᏗ" ᎨᏒᎢ ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᏗᎦᎳᏫᏍᏗ Ꮎ ᏥᏄᏍᏛᎩ [[ᎪᏢᏅ]] ᎭᏫᎾᏗᏢ
-Beijing, ᎠᎦᎾᏫᏗᏍᎩ ᎭᏫᎾᏗᏢ 1917. ᎪᎯ ᎢᎦ, ᎾᎿᎢ ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗᏇ 1.5 ᎢᏳᏆᏗᏅᏓ ᎠᏁᎳ ᎭᏫᎾᏗᏢ 
-ᏅᎩᏍᎪᎯ ᎯᏍᎩ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. ᎯᎠ ᏗᎦᎳᏫᏍᏗ ᎤᏙᏣᎵ ᎯᎠ ᏂᏓᏙᎳᎬᎾ ᎤᏩᏂᎦᎸ ᏚᏳᎪᏛ Ꮎ ᎠᏓᏁᏟᏴᏍᏗ ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᎬᏱ ᏔᎵᏍᎪᎯᏁ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᏓᏂᏍᏓᏲᎯᎲ ᎠᎴ ᏥᏌ ᏕᎴᎯᏌᏅ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎾᏕᏗᏴᎲ. ᎯᎠ ᏗᎦᎳᏫᏍᏗ ᎨᏒᎢ ᎬᏙᏗ-ᏦᎢ ᏥᏄᏍᏗ ᏌᏊ ᎠᎴ ᎤᏬᎯᏳ Ꮎ ᏂᎦᏛ ᎯᎠ ᎠᎾᏕᎶᏆᏍᎬ ᎯᎠ ᎨᏃᎮᏛ ᎠᏎ ᎤᎭ ᎦᎾᏄᎪᏫᏒ ᏫᏓᏎᎸᎢ ᎦᏐᎯ ᎾᏍᎩ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᏗᏓᏅᏗᏍᏙᏗ ᏗᏓᎧᏁᎶᎰᎮᏎᏗ. ᎯᎠ ᏗᎦᎳᏫᏍᏗ ᎾᏍᎩ ᎾᏍᏇ ᎠᎵᏐᏍᏛ ᎠᎵᏣᏙᏗ ᎯᎠ ᎨᏃᎮᏛ ᏂᎦᏛ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎤᏓᎷᎸ ᎯᎠ ᏔᎵᏁ ᏓᎦᎷᏥ ᏥᏌ. ᎤᏅᏌ ᎨᏒᎩ ᎾᏍᎩ ᎾᏍᏇ ᏌᏊ ᎯᎠ ᏦᎢ ᎢᎦᏛ [[ᏥᎾ]] <!-- Chinese --> ᎦᎵᏦᏕ ᏧᏂᎳᏫᏍᏗ Ꮎ ᎬᏂᎨᏒ ᏄᏍᏗᏔᏅ ᎤᏓᎷᎸ ᎯᎠ ᏓᏂᎦᏘᎴᎬ ᎠᎩᏒᎯ ᎠᎦᎾᏫᏗᏍᎩ ᎭᏫᎾᏗᏢ 1949. 
+[[File:TrueJesusChurchMalaysia001.jpeg|thumb|ᏗᎦᎳᏫᏍᏗ ᏥᏌᏯ, [[Kuala Lumpur]], [[Malaysia|ᎹᎴᎢᏏᎠ]]]]
+ᎯᎠ "ᎤᏙᎯᏳ ᏥᏌ ᏗᎦᎳᏫᏍᏗ" ᎨᏒᎢ ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᏗᎦᎳᏫᏍᏗ Ꮎ ᏥᏄᏍᏛᎩ [[ᎪᏢᏅ]] ᎭᏫᎾᏗᏢ Beijing, ᎠᎦᎾᏫᏗᏍᎩ ᎭᏫᎾᏗᏢ 1917. ᎪᎯ ᎢᎦ, ᎾᎿᎢ ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗᏇ 1.5 ᎢᏳᏆᏗᏅᏓ ᎠᏁᎳ ᎭᏫᎾᏗᏢ ᏅᎩᏍᎪᎯ ᎯᏍᎩ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ. ᎯᎠ ᏗᎦᎳᏫᏍᏗ ᎤᏙᏣᎵ ᎯᎠ ᏂᏓᏙᎳᎬᎾ ᎤᏩᏂᎦᎸ ᏚᏳᎪᏛ Ꮎ ᎠᏓᏁᏟᏴᏍᏗ ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᎬᏱ ᏔᎵᏍᎪᎯᏁ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ. ᏓᏂᏍᏓᏲᎯᎲ ᎠᎴ ᏥᏌ ᏕᎴᎯᏌᏅ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎾᏕᏗᏴᎲ. ᎯᎠ ᏗᎦᎳᏫᏍᏗ ᎨᏒᎢ ᎬᏙᏗ-ᏦᎢ ᏥᏄᏍᏗ ᏌᏊ ᎠᎴ ᎤᏬᎯᏳ Ꮎ ᏂᎦᏛ ᎯᎠ ᎠᎾᏕᎶᏆᏍᎬ ᎯᎠ ᎨᏃᎮᏛ ᎠᏎ ᎤᎭ ᎦᎾᏄᎪᏫᏒ ᏫᏓᏎᎸᎢ ᎦᏐᎯ ᎾᏍᎩ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᏗᏓᏅᏗᏍᏙᏗ ᏗᏓᎧᏁᎶᎰᎮᏎᏗ. ᎯᎠ ᏗᎦᎳᏫᏍᏗ ᎾᏍᎩ ᎾᏍᏇ ᎠᎵᏐᏍᏛ ᎠᎵᏣᏙᏗ ᎯᎠ ᎨᏃᎮᏛ ᏂᎦᏛ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎤᏓᎷᎸ ᎯᎠ ᏔᎵᏁ ᏓᎦᎷᏥ ᏥᏌ. ᎤᏅᏌ ᎨᏒᎩ ᎾᏍᎩ ᎾᏍᏇ ᏌᏊ ᎯᎠ ᏦᎢ ᎢᎦᏛ [[Chinese|ᏓᎶᏂᎨ]] ᎦᎵᏦᏕ ᏧᏂᎳᏫᏍᏗ Ꮎ ᎬᏂᎨᏒ ᏄᏍᏗᏔᏅ ᎤᏓᎷᎸ ᎯᎠ ᏓᏂᎦᏘᎴᎬ ᎠᎩᏒᎯ ᎠᎦᎾᏫᏗᏍᎩ ᎭᏫᎾᏗᏢ 1949. 
 
 ᎯᎠ ᏍᎪᎯ ᏄᏦᏍᏛᎾ ᎤᏬᎯᏳᏒ ᎯᎠ ᏗᎦᎳᏫᏍᏗ ᎠᎴ:
 
