--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -1,18 +1,78 @@
-[[File:Asia_(orthographic_projection).svg|right|120px|ᏓᎶᏂᎦᏍᏛ]]
-ᏓᎶᏂᎦᏍᏛ [[ᎡᏆ ᎦᏙᎯ]], ᎾᎥᏂᎨᏍᏙᏗ [[ᏳᎳᏛ]].
+[[File:Asia_(orthographic_projection).svg|right|240px|ᏓᎶᏂᎦᏍᏛ]]
+ᏓᎶᏂᎦᏍᏛ [[ᎡᏆ ᎦᏙᎯ]], ᎾᎥᏂᎨᏍᏙᏗ [[ᏳᎳᏛ]]. ᎤᏔᏂᎢᏍᏗ ᎡᏆ ᎦᏙᎯ ᎡᎶᎯ-Ꭿ.
 
-*[[ᏥᎾ]]
+==ᏓᎶᏂᎦᏍᏛ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ==
+===ᎠᏰᎵ ᏓᎶᏂᎦᏍᏛ===
+*[[Kazakhstan]]
+*[[Kyrgyzstan]]
+*[[Tajikistan]]
+*[[Turkmenistan]]
+*[[Uzbekistan]]
 
-*[[ᏣᏩᏂ]]
-**[[ᏙᎩᏲ]]
+===ᎧᎸᎬᎢᏗᏢ ᏓᎶᏂᎦᏍᏛ===
+*[[Hong Kong]]
+*[[Japan|ᏣᏩᏂᏏ]]
+*[[Macau]]
+*[[Mongolia|ᎹᏂᎪᎵᎠ]]
+*[[North Korea]]
+*[[China|ᏓᎶᏂᎨᏍᏛ]]
+*[[South Korea]]
+*[[Taiwan]]
 
-*[[ᎤᎦᎾᏭ ᎢᏗᎵ ᎪᎴᎠ]]
+===ᎤᏴᏢ ᎢᏗᏢ ᏗᏕᎬᏔᏛ===
+*ᎢᎦᏛ [[Russia|ᏲᏂᎢ]]
 
-==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+===ᎤᎦᎾ ᏭᎧᎸᎬ ᎢᏗᏢ ᏗᏕᎬᏔᏛ===
+*[[Brunei]]
+*[[Burma]]
+*[[East Timor]]
+*[[Indonesia|ᎢᏂᏙᏂᏏᏯ]]
+*[[Laos|ᎳᎣᏍ]]
+*[[Malaysia|ᎹᎴᎢᏏᎠ]]
+*[[Philipines|ᎠᏂᏈᎵᎢ]]
+*[[Singapore]]
+*[[Thailand]]
+*[[Vietnam]]
+
+===ᎤᎦᎾᏭ ᎢᏗᏢ ᏗᏕᎬᏔᏛ===
+[[File:Location-Asia-UNsubregions orthographic projection.png|thumb|240px]]
+*[[Afghanistan]]
+*[[Bangladesh]]
+*[[Bhutan]]
+*[[India|ᎢᏅᏗᎾ]]
+*[[Maldives]]
+*[[Nepal]]
+*[[Pakistan]]
+*[[Sri Lanka]]
+
+===ᏭᏕᎵᎬᏗᏢ ᏗᏕᎬᏔᏛ===
+*[[Armenia]]
+*[[Azerbaijan]]
+*[[Bahrain]]
+*[[Cyprus]]
+*[[Georgia]]
+*[[Iraq]]
+*[[Iran]]
+*[[Israel]]
+*[[Jordan]]
+*[[Kuwait]]
+*[[Lebanon]]
+*[[Oman|ᎣᎹᏂ]]
+*[[Palestine]]
+*[[Quatar]]
+*[[Saudi Arabia]]
+*[[Syria]]
+*ᎢᎦᏛ [[Turkey]]
+*[[United Arab Emirates]]
+*[[Yemen|ᏰᎺᏂ]]
+*ᎢᎦᏛ [[Egypt]]
+
+==ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ==
 {{Commons|Asia|ᏓᎶᏂᎦᏍᏛ}}
+*[[ᎡᏆ ᎦᏙᎯ]]
+*[[ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ]]
 
 [[Category:ᏓᎶᏂᎦᏍᏛ| ]]
-{{stub}}
 
 [[ace:Asia]]
 [[af:Asië]]
