--- a/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
+++ b/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
@@ -279,7 +279,7 @@
 ==ᏫᏓᏎᏄᎢ==
 *Howard, Gregg, ed. ''English/Cherokee Glossary.'' Various Indians Peoples Publishing, 2000. ISBN 1-884655-63-7.
 
-[[Category:ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ]]
+[[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ| ]]
 
 [[ab:Атәылақәеи атерриториақәеи алфавиттә рыхьӡынҵа]]
 [[af:Lys van lande]]
