*Empty MediaWiki Message*

--- a/ᎡᏆ_ᎦᏙᎯ.mw
+++ b/ᎡᏆ_ᎦᏙᎯ.mw
@@ -18,8 +18,7 @@
 == ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 {{Commonscat|Continents}}
 
-[[Category:ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ]]
-[[Category:ᎡᎶᎯ]]
+[[Category:ᎡᏆ ᎦᏙᎯ| ]]
 
 [[af:Kontinent]]
 [[an:Continent]]
