--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -1,52 +1,71 @@
 ᏳᎳᏛ [[ᎡᏆ ᎦᏙᎯ]], ᎾᎥᏂᎨᏍᏙᏗ [[ᏓᎶᏂᎦᏍᏛ]].
 
+==ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ==
 [[File:LocationEurope.png|thumb|250px|ᏳᎳᏛ]]
 [[File:Europe satellite orthographic.jpg|thumb|350px|ᏗᏟᎶᏍᏔᏄ]]
-* [[Russia]]
-* [[ᏳᎬᎳᎢᏅ]]
-* [[ᏇᎳᎷᏒ]]
-* [[ᎼᎸᏙᏩ]]
-* [[ᎶᎹᏂᏯ]]
-* [[ᏎᎸᏈᏯ]]
-* [[Croatia]]
-* [[Slovenia]]
-* [[ᎠᎸᏇᏂᏯ]]
-* [[ᎹᏎᏙᏂᏯ]]
-* [[ᏉᏍᏂᏯ]]
-* [[Andorra|Anvdola]]
-* [[Armenia|Hayastani]]
-* [[Austria|Kalvgvditlv Ayeli]]
-* [[Azerbaijan|Asebijani]]
-* [[Belgium]]
-* [[Czech Republic]]
-* [[Denmark]]
-* [[Finland]]
-* [[France]]
-* [[Germany]], [[ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ]] <!-- German language -->
-* [[Italy]]
-* [[Estonia]]
-* [[Latvia]]
-* [[Lithuania]]
-* [[Norway]]
-* [[Sweden]], [[ᎤᎦᎾᏍᏔ ᎦᏬᏂᎯᏍᏗ]] <!-- Swedish Language -->
-* [[Poland]]
-* [[Portugal]]
-* [[ᏍᏆᏂ]] <!-- spain -->
-* [[Switzerland]]
-* [[Turkey]]
-* [[United Kingdom|ᎦᎵᏍᏏᎯ]]
-* The [[Netherlands]]
+*[[Sweden|ᎠᏂᎤᎦᎾᏍᏙ]]<!--per Joseph Erb -->
+*[[Germany|ᎠᏂᏛᏥ]]
+*[[Albania]]
+*[[Andorra]]
+*[[Armenia]]
+*[[Austria]]
+*[[Azerbaijan]]
+*[[Estonia|ᎡᏍᏙᏂᏯ]]
+*[[Belarus]]
+*[[Belgium]]
+*[[Bosnia ᎠᎴ Herzegovina]]
+*[[Bulgaria]]
+*[[Croatia]]
+*[[Cyprus]]
+*[[Czech Republic]]
+*[[Denmark]]
+*[[Finland]]
+*[[United Kingdom|ᎩᎵᏏᏲ]]
+*[[France|ᎦᎸᏥᏱ]]
+*[[Georgia]]
+*[[Greece]]
+*[[Hungary]]
+*[[Iceland]]
+*[[Ireland]]
+*[[Kazakhstan]]
+*[[Latvia]]
+*[[Liechtenstein]]
+*[[Lithuania]]
+*[[Luxembourg]]
+*[[Macedonia]]
+*[[Malta]]
+*[[Moldova]]
+*[[Monaco]]
+*[[Montenegro]]
+*[[Netherlands]]
+*[[Norway]]
+*[[Poland]]
+*[[Portugal]]
+*[[Romania]]
+* [[Spain|ᏍᏆᏂ]]
+*[[San Marino]]
+*[[Serbia]]
+*[[Slovakia]]
+*[[Slovenia]]
+*[[Switzerland]]
+*[[Turkey]]
+*[[Ukraine]]
+*[[Italy|ᏲᎶ]]
+*[[Russia|ᏲᏂᎢ]]
 
 <div align="left">{{ᎡᎶᏆ}}</div>
 
-{{stub}}
+==ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ==
+{{Commons|Europe|ᏩᎳᏛ}}
+*[[ᎡᏆ ᎦᏙᎯ]]
+*[[ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ]]
+*[[List of European countries with Native names]]
 
-See also: [[List of European countries with Native names]].
-
-==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
-{{Commonscat|Europe}}
+==ᏓᏓᏚᎬ ᎪᏪᎵ==
+<references/>
 
 [[Category:ᏳᎳᏛ| ]]
+[[Category:ᎡᏆ ᎦᏙᎯ]]
 
 [[ab:Европа]]
 [[ace:Iërupa]]
