--- a/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
+++ b/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
@@ -62,6 +62,7 @@
 *Feeling, Durban. ''ᏣᎳᎩ-ᏲᏁᎦ ᏗᏕᏠᏆᏍᏙᏗ.'' ᏓᎵᏆ, ᎣᎦᎳᎰᎹ: ᏣᎳᎩᎯ ᎠᏰᎵ, 1975.
 
 [[Category:ᎠᎹᏰᏟ| ]]
+[[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[ab:Америка Еиду Аштатқәа]]
 [[ace:Amirika Carékat]]
