--- a/ᏆᏍᏂᏯ_ᎠᎴ_ᎲᏤᎪᏫᎾ.mw
+++ b/ᏆᏍᏂᏯ_ᎠᎴ_ᎲᏤᎪᏫᎾ.mw
@@ -5,6 +5,7 @@
 {{stub}}
 
 [[Category:ᏳᎳᏛ]]
+[[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 [[Category:Questionably transliterated titles]]
 
 [[ace:Bosnia Hèrzègovina]]
