--- a/ᎢᏓᎵᏱ.mw
+++ b/ᎢᏓᎵᏱ.mw
@@ -17,11 +17,12 @@
 '''ᏲᎶ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏛ]].
 
 ==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
-{{Commonscat|Italy}}
+{{Commonscat|Italy|ᏲᎶ}}
 
 {{stub}}
 
 [[Category:ᏳᎳᏛ]]
+[[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[ab:Италиа]]
 [[ace:Itali]]
