--- a/ᏣᎳᎩ_ᏧᎴᎯᏌᏅᎯ.mw
+++ b/ᏣᎳᎩ_ᏧᎴᎯᏌᏅᎯ.mw
@@ -1,5 +1,5 @@
 [[Image:NewEchota.jpg|300px|right]]
-ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ, ᎪᏪᎵ ᎦᎴᏯᏔᏅ ᎾᎿᎢ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ.
+ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ, ᎪᏪᎵ ᎦᎴᏯᏔᏅ ᎾᎿᎢ [[ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ]].
 
 [[Category:ᏣᎳᎩ]]
 [[Category:ᏗᏛᎪᏔᏅ]]
