ᎪᏪᎵᎠ ᎤᏙᎯᏳᎯᏯ ᎬᏩᏚᏫᏛ ᎠᏂᏅᏯ.

--- a/ᏅᏯ.mw
+++ b/ᏅᏯ.mw
@@ -1,3 +1,96 @@
-[[File:ᏅᏯ.jpg]]
+ᏅᏯ ᎠᏍᏓᏯ. ᎡᎶᎯ ᎦᏚᎢ (lithosphere) ᎾᏍᎩ ᎤᎪᏗᏗ ᏅᏯ. Sedimentary ᎠᎾᏅᏯ ᎤᎪᏗᏗ ᎡᎶᎯ ᎦᏚᎢ (ᏝᏬᏚ ᎠᎾᏅᏯ 65%, ᏃᏱ ᎠᎾᏅᏯ 20-25%, ᎠᎴ carbonate ᎠᎾᏅᏯ 10 to 15% (e. g. ᎪᏍᏚᏅᏁᎬ ᏅᏯ).<ref>Blatt ᎠᎴ Tracy</ref>
 
-'''ᏅᏯ'''
+<gallery  widths="180px" heights="180px" perrow="3">
+File:Feuerstein (Flint) aus Polen - Unterseite.jpg|<center>[[Flint|ᏓᏣᏍᎦᎳ]], sedimentary ᏅᏯ
+File:Olivine basalt.jpg|<center>Olivine basalt, igneous ᏅᏯ
+File:MarbleUSGOV.jpg|<center>[[Marble|ᎦᏓᏲᏍᏗ]], metamorphic ᏅᏯ
+</gallery>
+
+==ᏓᏓᏚᎬ ᎪᏪᎵ==
+<references/>
+
+==ᏫᏓᏎᏄᎢ==
+*Blatt, Harvey ᎠᎴ Robert J. Tracy. ''Petrology: Igneous, Sedimentary, ᎠᎴ Metamorphic'', ᏄᏯᎩ ᎦᏚᎲᎢ, ᏄᏯᎩ: W. H. Freeman ᎠᎴ ᎤᎾᏓᏡᎩ, ᏔᎵᏁ ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ, 1996. ISBN 0-7167-2438-3.
+
+[[Category:ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]
+[[Category:ᏭᎫᏅᏛ ᏗᎬᏙᏗ]]
+
+[[ar:صخر (جيولوجيا)]]
+[[an:Roca]]
+[[arc:ܐܒܢܐ]]
+[[bn:শিলা]]
+[[be-x-old:Горная парода]]
+[[bs:Stijena]]
+[[bg:Скала]]
+[[ca:Roca]]
+[[cs:Skála]]
+[[cy:Carreg]]
+[[da:Klippe (geologi)]]
+[[de:Gestein]]
+[[et:Kivim]]
+[[el:Πέτρωμα]]
+[[es:Roca]]
+[[eo:Roko]]
+[[eu:Arroka]]
+[[fa:صخره (زمین‌شناسی)]]
+[[fr:Roche]]
+[[ga:Carraig]]
+[[gl:Rocha]]
+[[hak:Sa̍k-thèu]]
+[[ko:암석]]
+[[hy:Լեռնային ապար]]
+[[hi:शैल]]
+[[hr:Stijena]]
+[[io:Petro]]
+[[id:Batu]]
+[[is:Berg]]
+[[it:Roccia]]
+[[he:סלע]]
+[[jv:Watu]]
+[[kn:ಕಲ್ಲು]]
+[[kk:Тау жынысы]]
+[[sw:Mwamba (jiolojia)]]
+[[ht:Ròch]]
+[[ku:Kevir]]
+[[la:Lapis (geologia)]]
+[[lv:Ieži]]
+[[lb:Gestengs]]
+[[lt:Uoliena]]
+[[lmo:Córna]]
+[[hu:Kőzet]]
+[[mk:Карпа]]
+[[ml:പാറ]]
+[[ms:Batu]]
+[[mn:Чулуу]]
+[[nl:Gesteente]]
+[[new:पाऱै (सन् २००३या संकिपा)]]
+[[ja:岩石]]
+[[no:Bergart]]
+[[nn:Bergart]]
+[[nrm:Rotchi]]
+[[pnb:چٹان]]
+[[nds:Steen (Petrologie)]]
+[[pl:Skała]]
+[[pt:Rocha]]
+[[ro:Piatră]]
+[[ru:Горная порода]]
+[[simple:Rock (geology)]]
+[[sl:Kamnina]]
+[[sr:Стене]]
+[[sh:Stijena]]
+[[su:Batu]]
+[[fi:Kivi]]
+[[sv:Bergart]]
+[[ta:பாறை]]
+[[th:หิน]]
+[[tr:Kayaç]]
+[[uk:Гірська порода]]
+[[ur:حجر]]
+[[ug:تاش]]
+[[vec:Piera]]
+[[vi:Đá]]
+[[war:Bato (heolohiya)]]
+[[wo:Doj]]
+[[yi:שטיין]]
+[[zh-yue:石頭]]
+[[zh:岩石]]
