--- a/ᏅᏯ.mw
+++ b/ᏅᏯ.mw
@@ -6,6 +6,9 @@ File:Olivine basalt.jpg|<center>Olivine basalt, igneous ᏅᏯ
 File:MarbleUSGOV.jpg|<center>[[Marble|ᎦᏓᏲᏍᏗ]], metamorphic ᏅᏯ
 </gallery>
 
+==ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ==
+*[[ᎾᏳ]]
+
 ==ᏓᏓᏚᎬ ᎪᏪᎵ==
 <references/>
 
