--- a/ᎠᏂ.mw
+++ b/ᎠᏂ.mw
@@ -1,5 +1,39 @@
-[[File:Screen shot 2010-09-13 at 8.41.09 PM.png]]
+{{Taxobox
+| color = lightgreen
+| name = ᎠᏂ
+| image = Strawberry closeup.jpg
+| image_width = 250px
+| image_caption = ᎤᏩᎾᏒ ᎠᎴ ᎠᎪᏍᏗ ᎠᏂ ᎤᏂᏓᏔᏅ ᎠᎩᏍᏗ
+| regnum = [[Plant|Plantae]]
+| divisio = [[Flowering plant|Magnoliophyta]]
+| classis = [[Magnoliopsida]]
+| ordo = [[Rosales]]
+| familia = [[Rosaceae]]
+| subfamilia = [[Rosoideae]]
+| genus = [[Fragaria]]
+| species = '''''F.''''' × '''''ananassa'''''<!--N.B. Editors please keep multiplication sign outside quote marks, otherwise it appears italicised on certain browsers-->
+}}
+'''ᎠᏂ''' [[Plant|ᎦᎪᏘ]]. Ꮎ [[Fruit|ᎤᏓᏔᏅ ᎠᎩᏍᏗ]] ᎩᎦᎨ. [[Seed|ᎤᎦᎳ]] ᎦᏁᎦ-Ꭿ ᎤᏛᏒᎢ. [[Flowers|ᎠᏂᏥᎸᏍᎩ]] ᎠᎩᎦᎨ-ᎢᏳᏍᏗ, ᎠᎶᏂᎨ, ᎠᎴ ᎤᏁᎨ.
 
-'''ᎠᏂ'''
+[[Wild strawberry|ᎠᏂ ᎢᎾᎨ ᎡᎯ]] (''Fragaria virginiana'') [[kidney|ᏧᏓᎵ]] ᎧᏅᏫᎠ. ᎾᏍᎩᎾᏍᏉ, ᏕᎦᏅᏙᎬ ᎦᏅᎦᎵᎭ.<ref>Hamel ᎠᎴ [[Chiltoskey|ᏥᎵᏙᏍᎩ]] 57</ref>
+
+[[Stilwell, Oklahoma|ᏍᏗᎳᏪᎵ]], [[ᎣᎦᎳᎰᎹ]] ᎠᏂ ᏓᎾᎵᏍᏓᏴᎲᏍᎬ ᎾᏕᏘᏴᎯᏒ ᎤᏂᎭ.<ref>[http://strawberrycapital.com/aStrawberry%20Festival.htm "63rd ᎾᏕᏘᏴᎯᏒ ᏍᏗᎳᏪᎵ ᎠᏂ ᏓᎾᎵᏍᏓᏴᎲᏍᎬ."] ''ᏍᏗᎳᏪᎵ ᎩᏩᏂᏍ ᎤᎾᏙᏢᎯᏧᎾᏓᏡᎩᏧᎾᏓᏡᎩ.'' (25 ᏚᏂᏅᏗ 2010)</ref>
+
+==ᏓᏓᏚᎬ ᎪᏪᎵ==
+<references/>
+
+==ᏫᏓᏎᏄᎢ==
+*Hamel, Paul B. ᎠᎴ ᎺᎵ Ꭴ. ᏥᎵᏙᏍᎩ. ''ᏣᎳᎩ ᏗᎦᎪᏗ: Their Uses - A 400 Year History.'' 1975.
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|Strawberries}}
+*[http://www.biodiversityexplorer.org/plants/rosaceae/fragaria.htm Genus: ''Fragaria'' (ᎠᏂ)], Biogdiversity Explorer
+
+<gallery  widths="180px" heights="180px" perrow="3">
+File:Leaves of Garden Strawberries (Fragaria x ananassa).png|ᏧᎦᎶᎦ
+File:Strawberry flower 1.JPG|<center>ᎠᎶᏂᎨ ᎠᏥᎸᏍᎩ
+File:Strawberry nuts2 ies.jpg|<center>ᎤᎦᏔ
+</gallery>
 
 [[Category:Plantae]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
