--- a/ᎠᏂ.mw
+++ b/ᎠᏂ.mw
@@ -37,3 +37,35 @@ File:Strawberry nuts2 ies.jpg|<center>ᎤᎦᏔ
 
 [[Category:Plantae]]
 [[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
+
+
+[[ar:فراولة]]
+[[bn:স্ট্রবেরি]]
+[[ca:Maduixot]]
+[[cs:Jahoda]]
+[[da:Jordbær (frugt)]]
+[[de:Gartenerdbeere]]
+[[en:Garden strawberry]]
+[[nv:Dah woozh]]
+[[dsb:Zagrodna słynica]]
+[[et:Metsmaasikas]]
+[[es:Fragaria × ananassa]]
+[[fa:توت فرنگی]]
+[[fr:Fraise (fruit)]]
+[[gl:Amorodo]]
+[[hi:स्ट्रॉबेरी]]
+[[hsb:Zahrodna truskalca]]
+[[io:Frago]]
+[[it:Fragola]]
+[[csb:Ògardowô pòtrôwnica]]
+[[lt:Braškė]]
+[[ml:ഗാർഡൻ സ്ട്രോബെറി]]
+[[nl:Aardbei]]
+[[no:Hagejordbær]]
+[[pl:Truskawka]]
+[[ru:Земляника садовая]]
+[[fi:Puutarhamansikka]]
+[[sv:Jordgubbe]]
+[[th:สตรอเบอรี่]]
+[[uk:Суниця садова]]
+[[zh:草莓]]
